ver 0.9.9 (2009-11-23) 1. 调整：多语言内核合并成一个发布包，同时提供：简体、繁体和英文，并对内核进行了针对性修改 2. 添加：工具栏改为自动换行模式，添加工具栏强制换行命令：BtnBr，并对相关的样式和脚本进行了针对性修改 3. 调整：自带Ajax上传开始后弹出假上传进度窗口，防止用户意外关闭上传前操作界面导致上传失败 4. 添加：增加缩进为Tab快捷键，减少缩进为Shift+Tab快捷键 5. 修正：编辑内容区在预览状态下点击链接，会导致当前编辑区域失效，现更改为默认打开新窗口(_target) 6. 修正：演示用upload.php增加扩展名限制，以增加文件上传的安全性 7. 添加：UBB模式增加[code]的完美支持，保证[code][/code]区域里的内容不做任何修改 8. 修正：图片属性界面中的水平间距和垂直间距反了，在此重新更正 9. 添加：在settings中添加baseUrl参数，应用在需要相对路径的编辑环境中：编辑页面和图片文件不在同一个基础路径下，但是又需要图片等附件保存为相对路径 10.修正：Firefox下切换到源代码再切换回来，会导致无法用删除键和后退键问题的修正 11.调整：showModal函数由原先的单一iframe上传功能，现分离成两个独立函数：showIframeModal和showModal，前者调用内嵌iframe的模式窗口，后者显示普通的模式窗口，都可供插件调用 12.添加：添加getSelect函数，返回编辑器窗口中选中内容的HTML代码或者文本，唯一参数设置为'text'即是返回文本 13.添加：添加link链接的附件模式，不选择任何内容的情况下添加链接为添加附件，附件链接的文字可设置参数attachLinkText 14.修正：强制P标签功能的进一步完善，非P标签模式下，按回车键全部输出换行 15.添加：添加toggleShowBlocktag接口，以方便某些需要添加“显示或者隐藏块标签”按钮的开发者调用 16.修正：formatXHTML兼容性进一步提高，处理某些非标准HTML代码，导致部分内容丢失问题的修正 17.添加：系统自带的Ajax上传和iframe式上传增加“立即添加模式”，只需在返回的参数最前面加感叹号“!”，在上传完成后图片或者链接等内容即自动加入到编辑器内容中 18.修正：系统自带Ajax上传功能在Opera上传失败问题的修正

--- a/demos/demo01.html
+++ b/demos/demo01.html
@@ -5,20 +5,20 @@
 <title>xhEditor demo1 : 默认模式</title>
 <link rel="stylesheet" href="common.css" type="text/css" media="screen" />
 <script type="text/javascript" src="../jquery/jquery-1.3.2.min.js"></script>
-<script type="text/javascript" src="../xheditor.js"></script>
+<script type="text/javascript" src="../xheditor-zh-cn.js"></script>
 </head>
 <body>
 <form method="post" action="test.php">
 	<h3>xhEditor demo1 : 默认模式</h3>
 	xheditor(默认完全):<br />
 	<textarea id="elm1" name="elm1" class="xheditor" rows="12" cols="80" style="width: 80%">
-<p><span style="font-size:small;color:#ff6600;"><strong>登幽州台歌</strong></span></p><p><u>陈子昂</u></p><p>前不见古人，后不见来者。<img src="../xheditor_emot/shocked.gif"/></p><p>念天地之悠悠，独怆然而涕下！<img src="../xheditor_emot/cry.gif"/></p>
+<p><span style="font-size:small;color:#ff6600;"><strong>登幽州台歌</strong></span></p><p><u>陈子昂</u></p><p>前不见古人，后不见来者。<img src="../xheditor_emot/default/shocked.gif"/></p><p>念天地之悠悠，独怆然而涕下！<img src="../xheditor_emot/default/cry.gif"/></p>
 	</textarea><br /><br />xheditor-simple(简单):<br />
 	<textarea id="elm2" name="elm2" class="xheditor-simple" rows="12" cols="80" style="width: 80%">
-<p><span style="font-size:small;color:#ff6600;"><strong>登幽州台歌</strong></span></p><p><u>陈子昂</u></p><p>前不见古人，后不见来者。<img src="../xheditor_emot/shocked.gif"/></p><p>念天地之悠悠，独怆然而涕下！<img src="../xheditor_emot/cry.gif"/></p>
+<p><span style="font-size:small;color:#ff6600;"><strong>登幽州台歌</strong></span></p><p><u>陈子昂</u></p><p>前不见古人，后不见来者。<img src="../xheditor_emot/default/shocked.gif"/></p><p>念天地之悠悠，独怆然而涕下！<img src="../xheditor_emot/default/cry.gif"/></p>
 	</textarea><br /><br />xheditor-mini(迷你):<br />
 	<textarea id="elm3" name="elm3" class="xheditor-mini" rows="12" cols="80" style="width: 80%">
-<p><span style="font-size:small;color:#ff6600;"><strong>登幽州台歌</strong></span></p><p><u>陈子昂</u></p><p>前不见古人，后不见来者。<img src="../xheditor_emot/shocked.gif"/></p><p>念天地之悠悠，独怆然而涕下！<img src="../xheditor_emot/cry.gif"/></p>
+<p><span style="font-size:small;color:#ff6600;"><strong>登幽州台歌</strong></span></p><p><u>陈子昂</u></p><p>前不见古人，后不见来者。<img src="../xheditor_emot/default/shocked.gif"/></p><p>念天地之悠悠，独怆然而涕下！<img src="../xheditor_emot/default/cry.gif"/></p>
 	</textarea>
 	<br/><br />
 	<input type="submit" name="save" value="Submit" />
