--- a/demos/demo07.html
+++ b/demos/demo07.html
@@ -5,7 +5,7 @@
 <title>xhEditor demo7 : UBB可视化编辑</title>
 <link rel="stylesheet" href="common.css" type="text/css" media="screen" />
 <script type="text/javascript" src="../jquery/jquery-1.3.2.min.js"></script>
-<script type="text/javascript" src="../xheditor.js"></script>
+<script type="text/javascript" src="../xheditor-zh-cn.js"></script>
 <script type="text/javascript" src="../xheditor_plugins/ubb.js"></script>
 <script type="text/javascript">
 $(pageInit);
@@ -29,11 +29,11 @@ function pageInit()
 [size=3]文字大小为 3[/size]
 [font=仿宋]字体为仿宋[/font]
 [align=Center]内容居中[/align]
-[img]http://static.pirate9.com/img/logo_s_zh-cn.gif[/img]
-[img=238,66]http://static.pirate9.com/img/logo_s_zh-cn.gif[/img]
+[img]img/pirate9.gif[/img]
+[img=238,66]img/pirate9.gif[/img]
 [url]http://pirate9.com/[/url]
 [url=http://pirate9.com/]第9海盗[/url]
-[url=http://pirate9.com/][img]http://static.pirate9.com/img/logo_s_zh-cn.gif[/img][/url]
+[url=http://pirate9.com/][img]img/pirate9.gif[/img][/url]
 [email]yanis.wang@gmail.com[/email]
 [email=yanis.wang@gmail.com]Yanis.Wang[/email]
 X[sup]2[/sup]
