--- a/demos/uploadgui.html
+++ b/demos/uploadgui.html
@@ -20,6 +20,6 @@ function upload()
 </head> 
 <body> 
 <a href="javascript:;" onclick="upload();">点击这里完成文件上传</a><br />
-<p style="color:#999;">注：此页面仅供演示用，您可以在此页面的基础上实现文件上传和文件管理功能<br />本页面提供两个接口用来和编辑器进行互动：callback和unloadme，其中callback接口的返回参数个数可在showModal调用时进行定义</p>
+<p style="color:#999;">注：此页面仅供演示用，您可以在此页面的基础上实现文件上传和文件管理功能<br />本页面提供两个接口用来和编辑器进行互动：callback和unloadme，其中callback接口的返回参数个数可在showIframeModal调用时进行定义</p>
 </body> 
 </html>
