--- a/demos/demo09.html
+++ b/demos/demo09.html
@@ -13,7 +13,7 @@
 -->
 </style>
 <script type="text/javascript" src="../jquery/jquery-1.3.2.min.js"></script>
-<script type="text/javascript" src="../xheditor.js"></script>
+<script type="text/javascript" src="../xheditor-zh-cn.js"></script>
 <script type="text/javascript">
 $(pageInit);
 function pageInit()
