ver 1.0.0 rc1 (2010-3-1) 1. 添加：demo7 UBB演示结合syntaxhighlighter添加代码高亮示例 2. 添加：之前上传接口的msg变量仅能是字符串，现在可使用数组，但是必需保证数组中有一个变量名：url，其它变量可以任意添加，例：{err:'',msg:{url:'test.txt',id:'1'}} 3. 添加：鼠标点击事件传递到textarea中，方便某些特殊应用监控鼠标事件 4. 添加：超链接模块添加批量插入功能，返回链接地址可以为如下方式：test1.html,test1|test2.html,test2，逗号前面为链接url，后面部分为链接文本，多个链接之间用|分隔 5. 添加：demo10添加超链接模块的批量上传功能演示 6. 添加：Flash动画和多媒体文件两个模块在上传接口上添加宽度和高度参数，例：test.swf,100,200，分别代表：url、宽度和高度
1. 修正：在file://这样的本地环境下，IE等少数几个浏览器工作不正常问题的修正
2. 修正：在编辑器前一个表单项目按tab键，无法直接跳入编辑器区域问题的修正
3. 修正：Firefox等少数浏览器在空内容情况下自动添加<br />问题的修正
4. 修正：Firefox等浏览器在可视化编辑状态下无法强制换行问题的修正
5. 修正：IE7浏览器下模式窗口无法居中问题的修正
6. 修正：处理<font size="8">test</font>这样不规则HTML代码，会产生错误问题的修正
7. 修正：IE6,IE7无法编辑Flash和多媒体问题的修正

1. 调整：JS互动接口对象返回方式变更为：editor=$('#elm1').xheditor(true);，若同时对多个对象初始化，则返回所有成功对象的数组
2. 调整：添加的插件默认插入在full按钮组的Table表格后面，原先必需自己手工调用
3. 调整：jQuery更换为v1.4.2版本
4. 调整：繁体版xhEditor内核中的某些文字修改为更加本地化用词
5. 调整：textarea隐藏情况下，无法获得高度，造成编辑器0高度问题，现强制禁用并提醒开发者必需显示后再初始化
6. 调整：切换成源代码时格式化XHTML的输出格式进行了适当调整
7. 调整：为了和showModal接口保持一致，showIframeModal接口的title和ifmurl两个参数进行了顺序调换

--- a/demos/demo03.html
+++ b/demos/demo03.html
@@ -4,7 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>xhEditor demo3 : 皮肤选择</title>
 <link rel="stylesheet" href="common.css" type="text/css" media="screen" />
-<script type="text/javascript" src="../jquery/jquery-1.4.1.min.js"></script>
+<script type="text/javascript" src="../jquery/jquery-1.4.2.min.js"></script>
 <script type="text/javascript" src="../xheditor-zh-cn.js"></script>
 <script type="text/javascript">
 $(pageInit);
@@ -36,16 +36,19 @@ function submitForm(){$('#frmDemo').submit();}
 </div>
 <form id="frmDemo" method="post" action="show.php">
 	<h3>xhEditor demo3 : 皮肤选择</h3>
-	默认皮肤:<br/>
+	1,默认皮肤:<br/>
 	<textarea id="elm1" name="elm1" rows="12" cols="80" style="width: 80%">
 &lt;p&gt;当前实例调用的Javascript源代码为：&lt;/p&gt;&lt;pre id="line1"&gt;$('#elm1').xheditor(true,{skin:'default'});&lt;/pre&gt;
-	</textarea><br /><br />Office 2007 蓝色:<br />
+	</textarea><br /><br />
+	2,Office 2007 蓝色:<br />
 	<textarea id="elm2" name="elm2" rows="12" cols="80" style="width: 80%">
 &lt;p&gt;当前实例调用的Javascript源代码为：&lt;/p&gt;&lt;pre id="line1"&gt;$('#elm2').xheditor(true,{skin:'o2007blue'});&lt;/pre&gt;
-	</textarea><br /><br />Office 2007 银白色:<br />
+	</textarea><br /><br />
+	3,Office 2007 银白色:<br />
 	<textarea id="elm3" name="elm3" rows="12" cols="80" style="width: 80%">
 &lt;p&gt;当前实例调用的Javascript源代码为：&lt;/p&gt;&lt;pre id="line1"&gt;$('#elm3').xheditor(true,{skin:'o2007silver'});&lt;/pre&gt;
-	</textarea><br /><br />Vista:<br />
+	</textarea><br /><br />
+	4,Vista:<br />
 	<textarea id="elm4" name="elm4" rows="12" cols="80" style="width: 80%">
 &lt;p&gt;当前实例调用的Javascript源代码为：&lt;/p&gt;&lt;pre id="line1"&gt;$('#elm4').xheditor(true,{skin:'vista'});&lt;/pre&gt;
 	</textarea>
