--- a/demos/demo02.html
+++ b/demos/demo02.html
@@ -4,7 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>xhEditor demo2 : 自定义按钮</title>
 <link rel="stylesheet" href="common.css" type="text/css" media="screen" />
-<script type="text/javascript" src="../jquery/jquery-1.4.1.min.js"></script>
+<script type="text/javascript" src="../jquery/jquery-1.4.2.min.js"></script>
 <script type="text/javascript" src="../xheditor-zh-cn.js"></script>
 <script type="text/javascript">
 $(pageInit);
@@ -37,19 +37,23 @@ function submitForm(){$('#frmDemo').submit();}
 </div>
 <form id="frmDemo" method="post" action="show.php">
 	<h3>xhEditor demo2 : 自定义按钮</h3>
-	full(完全):<br />
+	1,full(完全):<br />
 	<textarea id="elm1" name="elm1" rows="12" cols="80" style="width: 80%">
 &lt;p&gt;当前实例调用的Javascript源代码为：&lt;/p&gt;&lt;pre id="line1"&gt;$('#elm1').xheditor(true,{tools:'full'});&lt;br /&gt;&lt;/pre&gt;
-	</textarea><br /><br />simple(简单):<br />
+	</textarea><br /><br />
+	2,simple(简单):<br />
 	<textarea id="elm2" name="elm2" rows="12" cols="80" style="width: 80%">
 &lt;p&gt;当前实例调用的Javascript源代码为：&lt;/p&gt;&lt;pre id="line1"&gt;$('#elm2').xheditor(true,{tools:'simple'});&lt;br /&gt;&lt;/pre&gt;
-	</textarea><br /><br />mini(迷你):<br />
+	</textarea><br /><br />
+	3,mini(迷你):<br />
 	<textarea id="elm3" name="elm3" rows="12" cols="80" style="width: 80%">
 &lt;p&gt;当前实例调用的Javascript源代码为：&lt;/p&gt;&lt;pre id="line1"&gt;$('#elm3').xheditor(true,{tools:'mini'});&lt;br /&gt;&lt;/pre&gt;
-	</textarea><br /><br />custom(自定义):<br />
+	</textarea><br /><br />
+	4,custom(自定义):<br />
 	<textarea id="elm4" name="elm4" rows="12" cols="80" style="width: 80%">
 &lt;p&gt;当前实例调用的Javascript源代码为：&lt;/p&gt;&lt;pre id="line1"&gt;$('#elm4').xheditor(true,{tools:'GStart,Cut,Copy,Paste,Pastetext,GEnd,Separator,GStart,Source,Preview,Fullscreen,About,GEnd'});&lt;br /&gt;&lt;/pre&gt;
-	</textarea><br /><br />多行模式:<br />
+	</textarea><br /><br />
+	5,多行模式:<br />
 	<textarea id="elm5" name="elm5" rows="12" cols="80" style="width: 80%">
 &lt;p&gt;当前实例调用的Javascript源代码为：&lt;/p&gt;&lt;pre id="line1"&gt;$('#elm4').xheditor(true,{tools:'GStart,Cut,Copy,Paste,Pastetext,GEnd,&lt;span style="color:#ff0000;"&gt;&lt;strong&gt;BtnBr&lt;/strong&gt;&lt;/span&gt;,GStart,Source,Preview,Fullscreen,About,GEnd'});&lt;br /&gt;&lt;/pre&gt;
 	</textarea>
