--- a/demos/demo04.html
+++ b/demos/demo04.html
@@ -4,7 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>xhEditor demo4 : 其它选项</title>
 <link rel="stylesheet" href="common.css" type="text/css" media="screen" />
-<script type="text/javascript" src="../jquery/jquery-1.4.1.min.js"></script>
+<script type="text/javascript" src="../jquery/jquery-1.4.2.min.js"></script>
 <script type="text/javascript" src="../xheditor-zh-cn.js"></script>
 <script type="text/javascript">
 $(pageInit);
@@ -36,16 +36,19 @@ function submitForm(){$('#frmDemo').submit();}
 </div>
 <form id="frmDemo" method="post" action="show.php">
 	<h3>xhEditor demo4 : 其它选项</h3>
-	本地URL转相对地址(rel):<br />
+	1,本地URL转相对地址(rel):<br />
 	<textarea id="elm1" name="elm1" rows="8" cols="80" style="width: 80%">
 &lt;p&gt;内部图片：&lt;img src="img/demo.gif" /&gt;&lt;/p&gt;&lt;p&gt;外部图片：&lt;img src="http://www.google.cn/intl/zh-CN/images/logo_cn.gif" /&gt;&lt;/p&gt;&lt;p&gt;内部链接：&lt;a href="index.html"&gt;xhEditor&lt;/a&gt;&lt;/p&gt;&lt;p&gt;外部链接：&lt;a href="http://www.google.com/"&gt;Google&lt;/a&gt;&lt;/p&gt;&lt;p&gt;&lt;a href="http://www.google.com/"&gt;&lt;br /&gt;&lt;/a&gt;&lt;/p&gt;&lt;p&gt;当前实例调用的Javascript源代码为：&lt;/p&gt;&lt;p&gt;$('#elm1').xheditor(true,{localUrl:'rel'});&lt;br /&gt;&lt;/p&gt;
-	</textarea><br /><br />本地URL转根地址(root):<br />
+	</textarea><br /><br />
+	2,本地URL转根地址(root):<br />
 	<textarea id="elm2" name="elm2" rows="8" cols="80" style="width: 80%">
 &lt;p&gt;内部图片：&lt;img src="img/demo.gif" /&gt;&lt;/p&gt;&lt;p&gt;外部图片：&lt;img src="http://www.google.cn/intl/zh-CN/images/logo_cn.gif" /&gt;&lt;/p&gt;&lt;p&gt;内部链接：&lt;a href="index.html"&gt;xhEditor&lt;/a&gt;&lt;/p&gt;&lt;p&gt;外部链接：&lt;a href="http://www.google.com/"&gt;Google&lt;/a&gt;&lt;/p&gt;&lt;p&gt;&lt;a href="http://www.google.com/"&gt;&lt;br /&gt;&lt;/a&gt;&lt;/p&gt;&lt;p&gt;当前实例调用的Javascript源代码为：&lt;/p&gt;&lt;p&gt;$('#elm2').xheditor(true,{localUrl:'root'});&lt;br /&gt;&lt;/p&gt;
-	</textarea><br /><br />本地URL转绝对地址(abs):<br />
+	</textarea><br /><br />
+	3,本地URL转绝对地址(abs):<br />
 	<textarea id="elm3" name="elm3" rows="8" cols="80" style="width: 80%">
 &lt;p&gt;内部图片：&lt;img src="img/demo.gif" /&gt;&lt;/p&gt;&lt;p&gt;外部图片：&lt;img src="http://www.google.cn/intl/zh-CN/images/logo_cn.gif" /&gt;&lt;/p&gt;&lt;p&gt;内部链接：&lt;a href="index.html"&gt;xhEditor&lt;/a&gt;&lt;/p&gt;&lt;p&gt;外部链接：&lt;a href="http://www.google.com/"&gt;Google&lt;/a&gt;&lt;/p&gt;&lt;p&gt;&lt;a href="http://www.google.com/"&gt;&lt;br /&gt;&lt;/a&gt;&lt;/p&gt;&lt;p&gt;当前实例调用的Javascript源代码为：&lt;/p&gt;&lt;p&gt;$('#elm3').xheditor(true,{localUrl:'abs'});&lt;br /&gt;&lt;/p&gt;
-	</textarea><br /><br />其它更多选项:<br />
+	</textarea><br /><br />
+	4,其它更多选项:<br />
 	<textarea id="elm4" name="elm4" rows="8" cols="80" style="width: 80%">
 &lt;p&gt;当前实例调用的Javascript源代码为：&lt;/p&gt;&lt;pre id="line1"&gt;$('#elm4').xheditor(true,{tools:'full',skin:'default',width:800,height:200,clickCancelDialog:false,fullscreen:false,layerShadow:3,linkTag:false,wordDeepClean:false,defLinkText:'默认超链接文字',sourceMode:false,showBlocktag:true,forcePtag:false,keepValue:true,readonly:false,internalScript:true,inlineScript:true,internalStyle:true,inlineStyle:true,loadCSS:'http://xheditor.com/css/global.css',shortcuts:{'ctrl+enter':submitForm}});&lt;/pre&gt;&lt;br /&gt;&lt;br /&gt;注：本实例演示其它大部分的初始化参数，详细帮助信息请查看：&lt;a href="http://code.google.com/p/xheditor/wiki/Help"&gt;http://code.google.com/p/xheditor/wiki/Help&lt;/a&gt;
 	</textarea>
