ver 1.0.0 rc2 (2010-4-1) 1. 添加：添加鼠标悬停延迟自动面板显示功能，提高用户操作效率，延迟时间在初始化时用hoverExecDelay参数设置，单位为毫秒，设置为-1表示关闭此功能 2. 添加：按钮对象添加h参数，h设置为1时代表当前按钮支持鼠标悬停自动显示，此参数同样适用于插件开发 3. 添加：在demo07 UBB演示中添加Flv视频演示 4. 添加：集成MSN表情，可在demo07 UBB演示中查看显示效果 5. 添加：自带Ajax文件上传添加按Esc取消上传功能 6. 添加：pasteHTML和pasteText函数添加第2个参数：bStart，可以是以下值：留空(覆盖粘贴)、true(粘贴在光标选择区域之前)、false(粘贴在光标选择区域之后) 7. 添加：切换到源代码，可视化编辑页面的光标对应源代码相应位置的定位功能 8. 添加：扩展jQuery的标准val函数，使之能够直接读取和设置编辑器的最新值 9. 添加：为方便外部应用的扩展，特将编辑器内部的window和document开放外部调用，变量名：win，doc 10.添加：扩展textarea的change事件，使之可以触发编辑器的change 11.添加：UBB演示demo07添加字节数统计演示 12.添加：内置Ajax上传和showIframeModal接口参数中的url地址可以使用“{editorRoot}”内置变量，用来定位编辑器文件夹中的页面，例如：{editorRoot}xheditor_plugins/test.html
1. 修正：<pre></pre>已编排格式中的换行符和制表符丢失问题的修正
2. 修正：最终代码提交时没有进行压缩问题的修正
3. 修正：表情没有插入alt信息问题的修正
4. 修正：表情分组切换时产生右移1像素位移问题的修正
5. 修正：当按钮的鼠标悬停样式偶尔失效时，按钮面板会产生右移1像素问题的修正
6. 修正：带面板的按钮包括插件，快捷键触发或者直接外部调用会产生错误问题的修正
7. 修正：IE浏览器预览时，会跑至页面尾部问题的修正
8. 修正：Firefox 3.6从源代码切换回来光标丢失问题的修正
9. 修正：p和div标签内部的&nbsp;占位符被清除，造成块标签零高度问题的修正
10.修正：IE拖动img大小不更新width和height属性值问题的修正
11.修正：IE浏览器下在表格中粘贴会位置错乱问题的修正
12.修正：IE浏览器下超链接的链接文字，在超链接是“http://”开头的情况下，输入“http://”开头文字无效的修正
13.修正：UBB模块中style="text-align:*"没转换成[align=*]问题的修正
14.修正：IE6下打开面板某些情况下会出现方形白色区域问题的修正
15.修正：加载多个编辑器时，用于IE粘贴处理的临时隐藏iframe被重复加载问题的修正
16.修正：IE6下某些情况下全屏后再取消全屏导致浏览器崩溃问题的修正

1. 调整：所有img图片强制添加alt标签，以使代码符合XHTML标准
2. 调整：对ubb插件进行了适当的调整，以兼容以下不标准情况：无[list]和[/list]结尾的[*]标识
3. 调整：优化formatXHTML函数，提高解析器工作效率
4. 调整：API函数setSource由原先的延迟写入，修改为立即写入
5. 调整：更换为更完善的IE光标丢失问题解决方案
6. 调整：为兼容w3c标准，原xheditor专有属性初始化模式，变更为直接在class中写参数，例：class="xheditor {skin:'o2007blue'}"
7. 调整：为兼容电驴、快播等特殊URL，超链接、图片、FLASH和多媒体4个按钮的批量插入分隔符，由原先的“|”变更为制表符(\t)
8. 调整：编辑器初始化代码由原先的xheditor(true,参数)精简为xheditor(参数)

--- a/demos/demo06.html
+++ b/demos/demo06.html
@@ -14,13 +14,14 @@
 		<li><a href="demo02.html"><span>自定义按钮</span></a></li>
 		<li><a href="demo03.html"><span>皮肤选择</span></a></li>
 		<li><a href="demo04.html"><span>其它选项</span></a></li>
-		<li><a href="demo05.html"><span>JS交互</span></a></li>
+		<li><a href="demo05.html"><span>API交互</span></a></li>
 		<li><a href="demo06.html"><span>非utf-8编码调用</span></a></li>
 		<li><a href="demo07.html"><span>UBB可视化</span></a></li>
 		<li><a href="demo08.html"><span>Ajax上传</span></a></li>
 		<li><a href="demo09.html"><span>插件扩展</span></a></li>
 		<li><a href="demo10.html"><span>iframe调用上传</span></a></li>
 		<li><a href="demo11.html"><span>异步加载</span></a></li>
+		<li><a href="../wizard.html" target="_blank"><span>生成代码</span></a></li>
 	</ul>
 </div>
 <form method="post" action="show.php">
