--- a/demos/index.html
+++ b/demos/index.html
@@ -20,7 +20,7 @@
 			<li><a href="demo02.html" target="_blank">demo02.html</a> (自定义按钮)</li>
 			<li><a href="demo03.html" target="_blank">demo03.html</a> (皮肤选择)</li>
 			<li><a href="demo04.html" target="_blank">demo04.html</a> (其它选项)</li>
-			<li><a href="demo05.html" target="_blank">demo05.html</a> (Javascript交互)</li>
+			<li><a href="demo05.html" target="_blank">demo05.html</a> (Javascript API交互)</li>
 			<li><a href="demo06.html" target="_blank">demo06.html</a> (非utf-8编码网页调用)</li>
 			<li><a href="demo07.html" target="_blank">demo07.html</a> (UBB可视化编辑)</li>
 			<li><a href="demo08.html" target="_blank">demo08.html</a> (Ajax文件上传)</li>
