--- a/demos/demo04.html
+++ b/demos/demo04.html
@@ -10,10 +10,10 @@
 $(pageInit);
 function pageInit()
 {
-	$('#elm1').xheditor(true,{localUrl:'rel',shortcuts:{'ctrl+enter':submitForm}});
-	$('#elm2').xheditor(true,{localUrl:'root',shortcuts:{'ctrl+enter':submitForm}});
-	$('#elm3').xheditor(true,{localUrl:'abs',shortcuts:{'ctrl+enter':submitForm}});
-	$('#elm4').xheditor(true,{tools:'full',skin:'default',width:800,height:200,clickCancelDialog:false,fullscreen:false,layerShadow:3,linkTag:false,wordDeepClean:false,defLinkText:'默认超链接文字',sourceMode:false,showBlocktag:true,forcePtag:false,keepValue:true,readonly:false,internalScript:true,inlineScript:true,internalStyle:true,inlineStyle:true,loadCSS:'http://xheditor.com/css/global.css',shortcuts:{'ctrl+enter':submitForm}});
+	$('#elm1').xheditor({localUrl:'rel',shortcuts:{'ctrl+enter':submitForm}});
+	$('#elm2').xheditor({localUrl:'root',shortcuts:{'ctrl+enter':submitForm}});
+	$('#elm3').xheditor({localUrl:'abs',shortcuts:{'ctrl+enter':submitForm}});
+	$('#elm4').xheditor({tools:'full',skin:'default',width:800,height:200,clickCancelDialog:false,fullscreen:false,layerShadow:3,linkTag:false,wordDeepClean:false,defLinkText:'默认超链接文字',sourceMode:false,showBlocktag:true,forcePtag:false,keepValue:true,readonly:false,internalScript:true,inlineScript:true,internalStyle:true,inlineStyle:true,hoverExecDelay:-1,loadCSS:'http://xheditor.com/css/global.css',emots:{qq:{name:'QQ',count:55,width:25,height:25,line:11},msn:{name:'MSN',count:40,width:22,height:22,line:8}},shortcuts:{'ctrl+enter':submitForm}});
 }
 function submitForm(){$('#frmDemo').submit();}
 </script>
@@ -25,32 +25,33 @@ function submitForm(){$('#frmDemo').submit();}
 		<li><a href="demo02.html"><span>自定义按钮</span></a></li>
 		<li><a href="demo03.html"><span>皮肤选择</span></a></li>
 		<li><a href="demo04.html"><span>其它选项</span></a></li>
-		<li><a href="demo05.html"><span>JS交互</span></a></li>
+		<li><a href="demo05.html"><span>API交互</span></a></li>
 		<li><a href="demo06.html"><span>非utf-8编码调用</span></a></li>
 		<li><a href="demo07.html"><span>UBB可视化</span></a></li>
 		<li><a href="demo08.html"><span>Ajax上传</span></a></li>
 		<li><a href="demo09.html"><span>插件扩展</span></a></li>
 		<li><a href="demo10.html"><span>iframe调用上传</span></a></li>
 		<li><a href="demo11.html"><span>异步加载</span></a></li>
+		<li><a href="../wizard.html" target="_blank"><span>生成代码</span></a></li>
 	</ul>
 </div>
 <form id="frmDemo" method="post" action="show.php">
 	<h3>xhEditor demo4 : 其它选项</h3>
 	1,本地URL转相对地址(rel):<br />
 	<textarea id="elm1" name="elm1" rows="8" cols="80" style="width: 80%">
-&lt;p&gt;内部图片：&lt;img src="img/demo.gif" /&gt;&lt;/p&gt;&lt;p&gt;外部图片：&lt;img src="http://www.google.cn/intl/zh-CN/images/logo_cn.gif" /&gt;&lt;/p&gt;&lt;p&gt;内部链接：&lt;a href="index.html"&gt;xhEditor&lt;/a&gt;&lt;/p&gt;&lt;p&gt;外部链接：&lt;a href="http://www.google.com/"&gt;Google&lt;/a&gt;&lt;/p&gt;&lt;p&gt;&lt;a href="http://www.google.com/"&gt;&lt;br /&gt;&lt;/a&gt;&lt;/p&gt;&lt;p&gt;当前实例调用的Javascript源代码为：&lt;/p&gt;&lt;p&gt;$('#elm1').xheditor(true,{localUrl:'rel'});&lt;br /&gt;&lt;/p&gt;
+&lt;p&gt;内部图片：&lt;img src=&quot;img/demo.gif&quot; alt=&quot;&quot; /&gt;&lt;/p&gt;&lt;p&gt;外部图片：&lt;img src=&quot;http://www.google.cn/intl/zh-CN/images/logo_cn.gif&quot; alt=&quot;&quot; /&gt;&lt;/p&gt;&lt;p&gt;内部链接：&lt;a href=&quot;index.html&quot;&gt;xhEditor&lt;/a&gt;&lt;/p&gt;&lt;p&gt;外部链接：&lt;a href=&quot;http://www.google.com/&quot;&gt;Google&lt;/a&gt;&lt;/p&gt;&lt;p&gt;&lt;a href=&quot;http://www.google.com/&quot;&gt;&lt;br /&gt;&lt;/a&gt;&lt;/p&gt;&lt;p&gt;当前实例调用的Javascript源代码为：&lt;/p&gt;&lt;p&gt;$('#elm1').xheditor({&lt;span style=&quot;color:#ff0000;&quot;&gt;localUrl:'rel'&lt;/span&gt;});&lt;br /&gt;&lt;/p&gt;
 	</textarea><br /><br />
 	2,本地URL转根地址(root):<br />
 	<textarea id="elm2" name="elm2" rows="8" cols="80" style="width: 80%">
-&lt;p&gt;内部图片：&lt;img src="img/demo.gif" /&gt;&lt;/p&gt;&lt;p&gt;外部图片：&lt;img src="http://www.google.cn/intl/zh-CN/images/logo_cn.gif" /&gt;&lt;/p&gt;&lt;p&gt;内部链接：&lt;a href="index.html"&gt;xhEditor&lt;/a&gt;&lt;/p&gt;&lt;p&gt;外部链接：&lt;a href="http://www.google.com/"&gt;Google&lt;/a&gt;&lt;/p&gt;&lt;p&gt;&lt;a href="http://www.google.com/"&gt;&lt;br /&gt;&lt;/a&gt;&lt;/p&gt;&lt;p&gt;当前实例调用的Javascript源代码为：&lt;/p&gt;&lt;p&gt;$('#elm2').xheditor(true,{localUrl:'root'});&lt;br /&gt;&lt;/p&gt;
+&lt;p&gt;内部图片：&lt;img src=&quot;img/demo.gif&quot; alt=&quot;&quot; /&gt;&lt;/p&gt;&lt;p&gt;外部图片：&lt;img src=&quot;http://www.google.cn/intl/zh-CN/images/logo_cn.gif&quot; alt=&quot;&quot; /&gt;&lt;/p&gt;&lt;p&gt;内部链接：&lt;a href=&quot;index.html&quot;&gt;xhEditor&lt;/a&gt;&lt;/p&gt;&lt;p&gt;外部链接：&lt;a href=&quot;http://www.google.com/&quot;&gt;Google&lt;/a&gt;&lt;/p&gt;&lt;p&gt;&lt;a href=&quot;http://www.google.com/&quot;&gt;&lt;br /&gt;&lt;/a&gt;&lt;/p&gt;&lt;p&gt;当前实例调用的Javascript源代码为：&lt;/p&gt;&lt;p&gt;$('#elm1').xheditor({&lt;span style=&quot;color:#ff0000;&quot;&gt;localUrl:'rel'&lt;/span&gt;});&lt;br /&gt;&lt;/p&gt;
 	</textarea><br /><br />
 	3,本地URL转绝对地址(abs):<br />
 	<textarea id="elm3" name="elm3" rows="8" cols="80" style="width: 80%">
-&lt;p&gt;内部图片：&lt;img src="img/demo.gif" /&gt;&lt;/p&gt;&lt;p&gt;外部图片：&lt;img src="http://www.google.cn/intl/zh-CN/images/logo_cn.gif" /&gt;&lt;/p&gt;&lt;p&gt;内部链接：&lt;a href="index.html"&gt;xhEditor&lt;/a&gt;&lt;/p&gt;&lt;p&gt;外部链接：&lt;a href="http://www.google.com/"&gt;Google&lt;/a&gt;&lt;/p&gt;&lt;p&gt;&lt;a href="http://www.google.com/"&gt;&lt;br /&gt;&lt;/a&gt;&lt;/p&gt;&lt;p&gt;当前实例调用的Javascript源代码为：&lt;/p&gt;&lt;p&gt;$('#elm3').xheditor(true,{localUrl:'abs'});&lt;br /&gt;&lt;/p&gt;
+&lt;p&gt;内部图片：&lt;img src=&quot;img/demo.gif&quot; alt=&quot;&quot; /&gt;&lt;/p&gt;&lt;p&gt;外部图片：&lt;img src=&quot;http://www.google.cn/intl/zh-CN/images/logo_cn.gif&quot; alt=&quot;&quot; /&gt;&lt;/p&gt;&lt;p&gt;内部链接：&lt;a href=&quot;index.html&quot;&gt;xhEditor&lt;/a&gt;&lt;/p&gt;&lt;p&gt;外部链接：&lt;a href=&quot;http://www.google.com/&quot;&gt;Google&lt;/a&gt;&lt;/p&gt;&lt;p&gt;&lt;a href=&quot;http://www.google.com/&quot;&gt;&lt;br /&gt;&lt;/a&gt;&lt;/p&gt;&lt;p&gt;当前实例调用的Javascript源代码为：&lt;/p&gt;&lt;p&gt;$('#elm1').xheditor({&lt;span style=&quot;color:#ff0000;&quot;&gt;localUrl:'rel'&lt;/span&gt;});&lt;br /&gt;&lt;/p&gt;
 	</textarea><br /><br />
 	4,其它更多选项:<br />
 	<textarea id="elm4" name="elm4" rows="8" cols="80" style="width: 80%">
-&lt;p&gt;当前实例调用的Javascript源代码为：&lt;/p&gt;&lt;pre id="line1"&gt;$('#elm4').xheditor(true,{tools:'full',skin:'default',width:800,height:200,clickCancelDialog:false,fullscreen:false,layerShadow:3,linkTag:false,wordDeepClean:false,defLinkText:'默认超链接文字',sourceMode:false,showBlocktag:true,forcePtag:false,keepValue:true,readonly:false,internalScript:true,inlineScript:true,internalStyle:true,inlineStyle:true,loadCSS:'http://xheditor.com/css/global.css',shortcuts:{'ctrl+enter':submitForm}});&lt;/pre&gt;&lt;br /&gt;&lt;br /&gt;注：本实例演示其它大部分的初始化参数，详细帮助信息请查看：&lt;a href="http://code.google.com/p/xheditor/wiki/Help"&gt;http://code.google.com/p/xheditor/wiki/Help&lt;/a&gt;
+&lt;p&gt;当前实例调用的Javascript源代码为：&lt;/p&gt;&lt;p&gt;$('#elm4').xheditor({tools:'full',skin:'default',width:800,height:200,clickCancelDialog:false,fullscreen:false,layerShadow:3,linkTag:false,wordDeepClean:false,defLinkText:'默认超链接文字',sourceMode:false,showBlocktag:true,forcePtag:false,keepValue:true,readonly:false,internalScript:true,inlineScript:true,internalStyle:true,inlineStyle:true,hoverExecDelay:-1,loadCSS:'http://xheditor.com/css/global.css',emots:{qq:{name:'QQ',count:55,width:25,height:25,line:11},msn:{name:'MSN',count:40,width:22,height:22,line:8}},shortcuts:{'ctrl+enter':submitForm}});&lt;/p&gt;&lt;br /&gt;&lt;br /&gt;注：本实例演示其它大部分的初始化参数，详细帮助信息请查看：&lt;a href="http://code.google.com/p/xheditor/wiki/Help"&gt;http://code.google.com/p/xheditor/wiki/Help&lt;/a&gt;
 	</textarea>
 	<br/><br />
 	<input type="submit" name="save" value="Submit" />
