--- a/demos/demo05.html
+++ b/demos/demo05.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>xhEditor demo5 : Javascript交互</title>
+<title>xhEditor demo5 : Javascript API交互</title>
 <link rel="stylesheet" href="common.css" type="text/css" media="screen" />
 <script type="text/javascript" src="../jquery/jquery-1.4.2.min.js"></script>
 <script type="text/javascript" src="../xheditor-zh-cn.js"></script>
@@ -11,7 +11,8 @@ $(pageInit);
 var editor;
 function pageInit()
 {
-	editor=$('#elm1').xheditor(true,{shortcuts:{'ctrl+enter':submitForm}});
+	editor=$('#elm1').xheditor({shortcuts:{'ctrl+enter':submitForm}});//交互方式1
+	editor=$('#elm1')[0].editor;//交互方式2
 }
 function submitForm(){$('#frmDemo').submit();}
 </script>
@@ -23,29 +24,32 @@ function submitForm(){$('#frmDemo').submit();}
 		<li><a href="demo02.html"><span>自定义按钮</span></a></li>
 		<li><a href="demo03.html"><span>皮肤选择</span></a></li>
 		<li><a href="demo04.html"><span>其它选项</span></a></li>
-		<li><a href="demo05.html"><span>JS交互</span></a></li>
+		<li><a href="demo05.html"><span>API交互</span></a></li>
 		<li><a href="demo06.html"><span>非utf-8编码调用</span></a></li>
 		<li><a href="demo07.html"><span>UBB可视化</span></a></li>
 		<li><a href="demo08.html"><span>Ajax上传</span></a></li>
 		<li><a href="demo09.html"><span>插件扩展</span></a></li>
 		<li><a href="demo10.html"><span>iframe调用上传</span></a></li>
 		<li><a href="demo11.html"><span>异步加载</span></a></li>
+		<li><a href="../wizard.html" target="_blank"><span>生成代码</span></a></li>
 	</ul>
 </div>
 <form id="frmDemo" method="post" action="show.php">
-	<h3>xhEditor demo5 : Javascript交互</h3>
+	<h3>xhEditor demo5 : Javascript API交互</h3>
 	<textarea id="elm1" name="elm1" rows="12" cols="80" style="width: 80%">
-&lt;p&gt;当前实例调用的Javascript源代码为：&lt;/p&gt;&lt;p&gt;var editor;&lt;br /&gt;editor=$('#elm1').xheditor(true);&lt;br /&gt;editor.pasteHTML('&amp;lt;strong&amp;gt;粘贴的内容&amp;lt;/strong&amp;gt;');&lt;/p&gt;&lt;p&gt;&lt;br /&gt;注：本页面演示大部分外部调用的API接口，更多详细帮助信息请查看：&lt;a href="http://code.google.com/p/xheditor/wiki/Help"&gt;http://code.google.com/p/xheditor/wiki/Help&lt;/a&gt;&lt;/p&gt;
+&lt;p&gt;当前实例调用的Javascript源代码为：&lt;/p&gt;&lt;p&gt;var editor;&lt;br /&gt;editor=$('#elm1').xheditor();//方式1&lt;br /&gt;editor=$('#elm1')[0].editor;//方式2&lt;br /&gt;editor.pasteHTML('&amp;lt;strong&amp;gt;粘贴的内容&amp;lt;/strong&amp;gt;');&lt;/p&gt;&lt;p&gt;&lt;br /&gt;注：本页面演示大部分外部调用的API接口，更多详细帮助信息请查看：&lt;a href=&quot;http://code.google.com/p/xheditor/wiki/Help&quot;&gt;http://code.google.com/p/xheditor/wiki/Help&lt;/a&gt;&lt;/p&gt;
 	</textarea>
-	<br/><br />
+	<br /><br />
 	<input type="submit" name="save" value="Submit" />
 	<input type="reset" name="reset" value="Reset" />
 </form>
 <br/>
 <div style="border:1px solid #999;padding:10px;">
 <a href="javascript:;" onclick="editor.focus();">focus();</a> | 
-<a href="javascript:;" onclick="editor.setSource('<p>aaa</p>');">setSource('&lt;p&gt;aaa&lt;/p&gt;');</a> |
+<a href="javascript:;" onclick="editor.setSource('<p>aaa1</p>');">setSource('&lt;p&gt;aaa1&lt;/p&gt;');</a> |
+<a href="javascript:;" onclick="$('#elm1').val('<p>aaa2</p>');">$('#elm1').val('&lt;p&gt;aaa2&lt;/p&gt;');</a> |
 <a href="javascript:;" onclick="alert(editor.getSource());">getSource();</a> | 
+<a href="javascript:;" onclick="alert($('#elm1').val());">$('#elm1').val();</a> |
 <a href="javascript:;" onclick="editor.appendHTML('<strong>添加在尾部</strong>');">appendHTML('&lt;strong&gt;添加在尾部&lt;/strong&gt;');</a> | 
 <a href="javascript:;" onclick="alert(editor.getSelect());">getSelect();</a> | 
 <a href="javascript:;" onclick="alert(editor.getSelect('text'));">getSelect('text');</a> | 
