--- a/demos/demo07.html
+++ b/demos/demo07.html
@@ -10,6 +10,10 @@
 	background:transparent url(syntaxhighlighter/code.gif) no-repeat 20px 20px;
 	background-position:3px 3px;
 }
+.btnFlv {
+	background:transparent url(mediaplayer/flv.gif) no-repeat 20px 20px;
+	background-position:3px 3px;
+}
 -->
 </style>
 <script type="text/javascript" src="../jquery/jquery-1.4.2.min.js"></script>
@@ -19,19 +23,41 @@
 $(pageInit);
 function pageInit()
 {
-	$('#elm1').xheditor(true,{plugins:{Code:{c:'btnCode',t:'插入代码',e:function(){
+	$('#elm1').xheditor({plugins:{Code:{c:'btnCode',t:'插入代码',h:1,e:function(){
 			var _this=this;
-			var htmlCode='<div><select id="xheCodeType"><option value="html">HTML/XML</option><option value="javascript">JavaScript</option><option value="css">CSS</option><option value="php">PHP</option><option value="csharp">C#</option><option value="cpp">C++</option><option value="java">Java</option><option value="perl">Perl</option><option value="python">Python</option><option value="ruby">Ruby</option><option value="vb">Visual Basic</option><option value="delphi">Delphi</option><option value="as3">Action Script 3</option><option value="sql">SQL</option><option value="plain">其它</option></select></div><div><textarea id="xheCodeValue" wrap="soft" spellcheck="false" style="width:300px;height:100px;" /></div><div style="text-align:right;"><input type="button" id="xheSave" value="确定" /></div>';
-			var jCode=$(htmlCode),jType=jSave=$('#xheCodeType',jCode),jValue=jSave=$('#xheCodeValue',jCode),jSave=$('#xheSave',jCode);
+			var htmlCode='<div><select id="xheCodeType"><option value="html">HTML/XML</option><option value="javascript">JavaScript</option><option value="css">CSS</option><option value="php">PHP</option><option value="csharp">C#</option><option value="cpp">C++</option><option value="java">Java</option><option value="perl">Perl</option><option value="python">Python</option><option value="ruby">Ruby</option><option value="vb">Visual Basic</option><option value="delphi">Delphi</option><option value="as3">Action Script 3</option><option value="sql">SQL</option><option value="plain">其它</option></select></div><div><textarea id="xheCodeValue" wrap="soft" spellcheck="false" style="width:300px;height:100px;" /></div><div style="text-align:right;"><input type="button" id="xheSave" value="确定" /></div>';			var jCode=$(htmlCode),jType=$('#xheCodeType',jCode),jValue=$('#xheCodeValue',jCode),jSave=$('#xheSave',jCode);
 			jSave.click(function(){
-				_this.focus();
+				_this.loadBookmark();
 				_this.pasteText('[code='+jType.val()+']\r\n'+jValue.val()+'\r\n[/code]');
 				_this.hidePanel();
 				return false;	
 			});
 			_this.showDialog(jCode);
+		}},Flv:{c:'btnFlv',t:'插入Flv视频',h:1,e:function(){
+			var _this=this;
+			var htmlFlv='<div>Flv文件:&nbsp; <input type="text" id="xheFlvUrl" value="http://" class="xheText" /></div><div>宽度高度: <input type="text" id="xheFlvWidth" style="width:40px;" value="480" /> x <input type="text" id="xheFlvHeight" style="width:40px;" value="400" /></div><div style="text-align:right;"><input type="button" id="xheSave" value="确定" /></div>';
+			var jFlv=$(htmlFlv),jUrl=$('#xheFlvUrl',jFlv),jWidth=$('#xheFlvWidth',jFlv),jHeight=$('#xheFlvHeight',jFlv),jSave=$('#xheSave',jFlv);
+			jSave.click(function(){
+				_this.loadBookmark();
+				_this.pasteText('[flv='+jWidth.val()+','+jHeight.val()+']'+jUrl.val()+'[/flv]');
+				_this.hidePanel();
+				return false;	
+			});
+			_this.showDialog(jFlv);
 		}}},
-		tools:'full',forcePtag:false,showBlocktag:false,beforeSetSource:ubb2html,beforeGetSource:html2ubb,emots:{'qq':{'name':'QQ','count':55,'width':25,'height':25,'line':11}},emotMark:true,shortcuts:{'ctrl+enter':submitForm}});
+		tools:'full',showBlocktag:false,beforeSetSource:ubb2html,beforeGetSource:html2ubb,emots:{qq:{name:'QQ',count:55,width:25,height:25,line:11},msn:{name:'MSN',count:40,width:22,height:22,line:8}},emotMark:true,shortcuts:{'ctrl+enter':submitForm}});
+	$('#elm1').change(countSize);//绑定编辑器change事件
+	_countSize();//预统计长度
+}
+var countTimer;
+function countSize()
+{
+	if(countTimer)clearTimeout(countTimer);
+	countTimer=setTimeout(_countSize,500);//延迟统计以提高代码执行效率
+}
+function _countSize()
+{
+	$('#spanCount').text($('#elm1').val().length);
 }
 function submitForm(){$('#frmDemo').submit();}
 </script>
@@ -43,19 +69,19 @@ function submitForm(){$('#frmDemo').submit();}
 		<li><a href="demo02.html"><span>自定义按钮</span></a></li>
 		<li><a href="demo03.html"><span>皮肤选择</span></a></li>
 		<li><a href="demo04.html"><span>其它选项</span></a></li>
-		<li><a href="demo05.html"><span>JS交互</span></a></li>
+		<li><a href="demo05.html"><span>API交互</span></a></li>
 		<li><a href="demo06.html"><span>非utf-8编码调用</span></a></li>
 		<li><a href="demo07.html"><span>UBB可视化</span></a></li>
 		<li><a href="demo08.html"><span>Ajax上传</span></a></li>
 		<li><a href="demo09.html"><span>插件扩展</span></a></li>
 		<li><a href="demo10.html"><span>iframe调用上传</span></a></li>
 		<li><a href="demo11.html"><span>异步加载</span></a></li>
+		<li><a href="../wizard.html" target="_blank"><span>生成代码</span></a></li>
 	</ul>
 </div>
 <form id="frmDemo" method="post" action="showubb.php">
 	<h3>xhEditor demo7 : UBB可视化编辑</h3>
-	<textarea id="elm1" name="elm1" rows="12" cols="80" style="width: 80%">
-[b]粗体文字 Abc[/b]
+	<textarea id="elm1" name="elm1" rows="12" cols="80" style="width: 80%">[b]粗体文字 Abc[/b]
 [u]下划线文字 Abc[/u]
 [i]斜体文字 Abc[/i]
 [s]删除线 Abc[/s]
@@ -78,6 +104,13 @@ X[sub]2[/sub]
 [list=1][*]列表项 #1[*]列表项 #2[*]列表项 #3[list=a][*]列表项 #1[*]列表项 #2[*]列表项 #3[/list][*]列表项 #4[/list]
 [table=300,#f5f5f5][tr=#E8F3FD][td=2,1]&nbsp;[/td][/tr][tr][td]&nbsp;[/td][td]&nbsp;[/td][/tr][tr][td]&nbsp;[/td][td]&nbsp;[/td][/tr][/table]
 [quote]我们是一艘年轻的海盗船，载着梦想，我们愿将快乐带到大海的每一个角落。 [/quote] 
+
+[flash=400,300]test.swf[/flash]
+
+[media=400,300,1]test.avi[/media]
+
+[flv]http://content.longtailvideo.com/videos/8.flv[/flv]
+
 [code=php]
 &lt;?php
 $t=1;
@@ -85,12 +118,8 @@ if($t==1)$str="Hello xhEditor!";
 else $str='Hello PHP';
 echo $str;//输出文字
 ?&gt;
-[/code]
-
-[flash=400,300]test.swf[/flash]
-
-[media=400,300,1]test.avi[/media]
-	</textarea>
+[/code]</textarea>
+	<br /><br />您当前输入了<span id="spanCount" style="color:#f00;font-weight:bold;">0</span>个字节(统计结果包括UBB代码)
 	<br/><br />
 	<input type="submit" name="save" value="Submit" />
 	<input type="reset" name="reset" value="Reset" />
