ver 1.0.0 RC3 (2010-5-5) 1. 添加：添加HTML5上传支持：多文件选择上传、真实上传进度显示以及从电脑中直接拖放文件上传，注：相应功能需要浏览器支持 2. 添加：添加upMultiple参数，控制是否允许多文件选择上传，默认为开启，此功能需要浏览器支持HTML5上传 3. 添加：添加全选SelectAll和打印Print两个工具按钮 4. 添加：添加多行完全工具栏组mfull，添加演示在demo01和demo02 5. 添加：对话框面板中的textarea表单项中按Ctrl+Enter自动调用确定按钮，目前仅影响“粘贴文本”按钮 6. 添加：非IE浏览器下对话框面板打开后在第一个可输入表单项设置焦点
1. 修正：会造成网页中非jquery的submit事件return false无效问题的修正
2. 修正：IE浏览器下从写字板粘贴内容会额外增加多余代码问题的修正
3. 修正：IE浏览器下段落标签无效问题的修正
4. 修正：IE浏览器下插入URL结尾带参数的FLASH和多媒体文件，会造成代码完全失效问题的修正
5. 修正：hr等自结束标签导致代码缩进格式化错误问题的修正
6. 修正：多次初始化编辑器，插件会被重复加载问题的修正
7. 修正：扩展的jQuery方法.val('test')不支持多dom批量写值问题的修正
8. 修正：IE6某些情况下打开按钮面板会造成界面闪动问题的修正
9. 修正：Firefox从全屏返回正常界面会导致当前页面滚动条置顶问题的修正
10.修正：shortcuts参数及addShortcuts函数定义的多个相同快捷键，最早定义才有效的问题修正，并允许在事件代码中return false来取消当前事件
11.修正：使用非强制P标签(BR模式)情况下，列表中无法用回车产生新列表项问题的修正
12.修正：IE浏览器下，菜单、颜色和表情由于代码编写不够完善，造成打开缓慢问题的修正
13.修正：无论是否开启内部代码，都会造成<script>标签丢失问题的修正
14.修正：XHTML格式化函数formatXHTML代码出错，造成某些非标准代码修复失败问题的修正

1. 调整：o2007blue和o2007silver两个皮肤鼠标悬停时样式进行了优化调整
2. 调整：添加js文件重复加载检测，以防止内核js文件被重复load
3. 调整：loadCSS参数支持加载<style></style>内部样式
4. 调整：系统内置Ajax上传添加*参数，不限制任何扩展名
5. 调整：UBB demo07中的高亮组件syntaxhighlighter由原先的2.1.364版更换成更为精简的1.5.1版，需要其它高亮组件请自行更换
6. 调整：批量插入分隔符由原先的制表符(\t)变更为半角空格( )
7. 调整：demos文件夹3个语言版本的upload.php、upload.asp和upload.aspx修改以支持HTML5上传
8. 调整：为遵守W3C标准及提高图片的搜索引擎友好性，UBB模块img标签在第一个参数位添加必填参数alt，例：[img=alt,100,100,center]a.gif[/img]或者[img=alt,center]a.gif[/img]，注：若希望升级至当前UBB版本，之前带参数的img标签，请自行批量转换

1. 取消：取消GStart和GEnd两个按钮，相应两个按钮会自动在相应位置添加
2. 取消：鉴于字数统计功能依赖的change事件会和其它插件产生严重的冲突问题，暂时取消此事件触发功能

--- a/demos/demo02.html
+++ b/demos/demo02.html
@@ -11,10 +11,11 @@ $(pageInit);
 function pageInit()
 {
 	$('#elm1').xheditor({tools:'full',shortcuts:{'ctrl+enter':submitForm}});
-	$('#elm2').xheditor({tools:'simple',shortcuts:{'ctrl+enter':submitForm}});
-	$('#elm3').xheditor({tools:'mini',shortcuts:{'ctrl+enter':submitForm}});
-	$('#elm4').xheditor({tools:'GStart,Cut,Copy,Paste,Pastetext,GEnd,Separator,GStart,Source,Preview,Fullscreen,About,GEnd',shortcuts:{'ctrl+enter':submitForm}});
-	$('#elm5').xheditor({tools:'GStart,Cut,Copy,Paste,Pastetext,GEnd,BtnBr,GStart,Source,Preview,Fullscreen,About,GEnd',shortcuts:{'ctrl+enter':submitForm}});
+	$('#elm2').xheditor({tools:'mfull',shortcuts:{'ctrl+enter':submitForm}});
+	$('#elm3').xheditor({tools:'simple',shortcuts:{'ctrl+enter':submitForm}});
+	$('#elm4').xheditor({tools:'mini',shortcuts:{'ctrl+enter':submitForm}});
+	$('#elm5').xheditor({tools:'Cut,Copy,Paste,Pastetext,Separator,Source,Preview,Fullscreen,About',shortcuts:{'ctrl+enter':submitForm}});
+	$('#elm6').xheditor({tools:'Cut,Copy,Paste,Pastetext,BtnBr,Source,Preview,Fullscreen,About',shortcuts:{'ctrl+enter':submitForm}});
 }
 function submitForm(){$('#frmDemo').submit();}
 </script>
@@ -42,21 +43,25 @@ function submitForm(){$('#frmDemo').submit();}
 	<textarea id="elm1" name="elm1" rows="12" cols="80" style="width: 80%">
 &lt;p&gt;当前实例调用的Javascript源代码为：&lt;/p&gt;&lt;p&gt;$('#elm1').xheditor({&lt;span style=&quot;color:#ff0000;&quot;&gt;tools:'full'&lt;/span&gt;});&lt;/p&gt;
 	</textarea><br /><br />
-	2,simple(简单):<br />
+	2,mfull(多行完全):<br />
 	<textarea id="elm2" name="elm2" rows="12" cols="80" style="width: 80%">
-&lt;p&gt;当前实例调用的Javascript源代码为：&lt;/p&gt;&lt;p&gt;$('#elm2').xheditor({&lt;span style=&quot;color:#ff0000;&quot;&gt;tools:'simple'&lt;/span&gt;});&lt;/p&gt;
+&lt;p&gt;当前实例调用的Javascript源代码为：&lt;/p&gt;&lt;p&gt;$('#elm2').xheditor({&lt;span style=&quot;color:#ff0000;&quot;&gt;tools:'mfull'&lt;/span&gt;});&lt;/p&gt;
 	</textarea><br /><br />
-	3,mini(迷你):<br />
+	3,simple(简单):<br />
 	<textarea id="elm3" name="elm3" rows="12" cols="80" style="width: 80%">
-&lt;p&gt;当前实例调用的Javascript源代码为：&lt;/p&gt;&lt;p&gt;$('#elm3').xheditor({&lt;span style=&quot;color:#ff0000;&quot;&gt;tools:'mini'&lt;/span&gt;});&lt;/p&gt;
+&lt;p&gt;当前实例调用的Javascript源代码为：&lt;/p&gt;&lt;p&gt;$('#elm3').xheditor({&lt;span style=&quot;color:#ff0000;&quot;&gt;tools:'simple'&lt;/span&gt;});&lt;/p&gt;
 	</textarea><br /><br />
-	4,custom(自定义):<br />
+	4,mini(迷你):<br />
 	<textarea id="elm4" name="elm4" rows="12" cols="80" style="width: 80%">
-&lt;p&gt;当前实例调用的Javascript源代码为：&lt;/p&gt;&lt;p&gt;$('#elm4').xheditor({&lt;span style=&quot;color:#ff0000;&quot;&gt;tools:'GStart,Cut,Copy,Paste,Pastetext,GEnd,Separator,GStart,Source,Preview,Fullscreen,About,GEnd'&lt;/span&gt;});&lt;/p&gt;
+&lt;p&gt;当前实例调用的Javascript源代码为：&lt;/p&gt;&lt;p&gt;$('#elm4').xheditor({&lt;span style=&quot;color:#ff0000;&quot;&gt;tools:'mini'&lt;/span&gt;});&lt;/p&gt;
 	</textarea><br /><br />
-	5,多行模式:<br />
+	5,custom(自定义):<br />
 	<textarea id="elm5" name="elm5" rows="12" cols="80" style="width: 80%">
-&lt;p&gt;当前实例调用的Javascript源代码为：&lt;/p&gt;&lt;p&gt;$('#elm4').xheditor({tools:'GStart,Cut,Copy,Paste,Pastetext,GEnd,&lt;span style=&quot;color:#ff0000;&quot;&gt;BtnBr&lt;/span&gt;,GStart,Source,Preview,Fullscreen,About,GEnd'});&lt;/p&gt;
+&lt;p&gt;当前实例调用的Javascript源代码为：&lt;/p&gt;&lt;p&gt;$('#elm5').xheditor({&lt;span style=&quot;color:#ff0000;&quot;&gt;tools:'Cut,Copy,Paste,Pastetext,Separator,Source,Preview,Fullscreen,About'&lt;/span&gt;});&lt;/p&gt;
+	</textarea><br /><br />
+	6,自定义多行模式:<br />
+	<textarea id="elm6" name="elm6" rows="12" cols="80" style="width: 80%">
+&lt;p&gt;当前实例调用的Javascript源代码为：&lt;/p&gt;&lt;p&gt;$('#elm6').xheditor({tools:'Cut,Copy,Paste,Pastetext,&lt;span style=&quot;color:#ff0000;&quot;&gt;BtnBr&lt;/span&gt;,Source,Preview,Fullscreen,About'});&lt;/p&gt;
 	</textarea>
 	<br/><br />
 	<input type="submit" name="save" value="Submit" />
