--- a/demos/demo01.html
+++ b/demos/demo01.html
@@ -30,17 +30,21 @@
 	<textarea id="elm1" name="elm1" class="xheditor" rows="12" cols="80" style="width: 80%">
 &lt;p&gt;当前实例调用的HTML代码为：&lt;/p&gt;&lt;p&gt;&amp;lt;textarea id=&quot;elm1&quot; name=&quot;elm1&quot; &lt;span style=&quot;color:#ff0000;&quot;&gt;class=&quot;xheditor&quot;&lt;/span&gt; rows=&quot;12&quot; cols=&quot;80&quot; style=&quot;width: 80%&quot;&amp;gt;&lt;/p&gt;
 	</textarea><br /><br />
-	2,xheditor-simple(简单):<br />
-	<textarea id="elm2" name="elm2" class="xheditor-simple" rows="12" cols="80" style="width: 80%">
-&lt;p&gt;当前实例调用的HTML代码为：&lt;/p&gt;&lt;p&gt;&amp;lt;textarea id=&quot;elm2&quot; name=&quot;elm2&quot; &lt;span style=&quot;color:#ff0000;&quot;&gt;class=&quot;xheditor-simple&quot;&lt;/span&gt; rows=&quot;12&quot; cols=&quot;80&quot; style=&quot;width: 80%&quot;&amp;gt;&lt;/p&gt;
+	2,xheditor-mfull(多行完全):<br />
+	<textarea id="elm2" name="elm2" class="xheditor-mfull" rows="12" cols="80" style="width: 80%">
+&lt;p&gt;当前实例调用的HTML代码为：&lt;/p&gt;&lt;p&gt;&amp;lt;textarea id=&quot;elm2&quot; name=&quot;elm2&quot; &lt;span style=&quot;color:#ff0000;&quot;&gt;class=&quot;xheditor-mfull&quot;&lt;/span&gt; rows=&quot;12&quot; cols=&quot;80&quot; style=&quot;width: 80%&quot;&amp;gt;&lt;/p&gt;
 	</textarea><br /><br />
-	3,xheditor-mini(迷你):<br />
-	<textarea id="elm3" name="elm3" class="xheditor-mini" rows="12" cols="80" style="width: 80%">
-&lt;p&gt;当前实例调用的HTML代码为：&lt;/p&gt;&lt;p&gt;&amp;lt;textarea id=&quot;elm3&quot; name=&quot;elm3&quot; &lt;span style=&quot;color:#ff0000;&quot;&gt;class=&quot;xheditor-mini&quot;&lt;/span&gt; rows=&quot;12&quot; cols=&quot;80&quot; style=&quot;width: 80%&quot;&amp;gt;&lt;/p&gt;
+	3,xheditor-simple(简单):<br />
+	<textarea id="elm3" name="elm3" class="xheditor-simple" rows="12" cols="80" style="width: 80%">
+&lt;p&gt;当前实例调用的HTML代码为：&lt;/p&gt;&lt;p&gt;&amp;lt;textarea id=&quot;elm3&quot; name=&quot;elm3&quot; &lt;span style=&quot;color:#ff0000;&quot;&gt;class=&quot;xheditor-simple&quot;&lt;/span&gt; rows=&quot;12&quot; cols=&quot;80&quot; style=&quot;width: 80%&quot;&amp;gt;&lt;/p&gt;
 	</textarea><br /><br />
-	4,自定义详细参数:<br />
-	<textarea id="elm4" name="elm4" class="xheditor {tools:'GStart,Bold,Italic,Underline,Strikethrough,About,GEnd',skin:'default'}" rows="12" cols="80" style="width: 80%">
-&lt;p&gt;当前实例调用的HTML代码为：&lt;/p&gt;&lt;p&gt;&amp;lt;textarea id=&quot;elm4&quot; name=&quot;elm4&quot; &lt;span style=&quot;color:#ff0000;&quot;&gt;class=&quot;xheditor {tools:'GStart,Bold,Italic,Underline,Strikethrough,About,GEnd',skin:'default'}&quot;&lt;/span&gt; rows=&quot;12&quot; cols=&quot;80&quot; style=&quot;width: 80%&quot;&amp;gt; &lt;br /&gt;&lt;/p&gt;&lt;p&gt;在以上3个参数的基础上，可以在后面接一个json格式的详细参数，参数和Javascript初始化模式中的完全一致。前面主参数为xheditor-simple或者xheditor-mini的情况下，后面参数中tools参数值是无效的，以前面的主参数为主。&lt;/p&gt;&lt;p&gt;特别说明：&lt;span style=&quot;color:#ff0000;&quot;&gt;json参数中请尽可能不要出现空格&lt;/span&gt;&lt;br /&gt;&lt;/p&gt;
+	4,xheditor-mini(迷你):<br />
+	<textarea id="elm4" name="elm4" class="xheditor-mini" rows="12" cols="80" style="width: 80%">
+&lt;p&gt;当前实例调用的HTML代码为：&lt;/p&gt;&lt;p&gt;&amp;lt;textarea id=&quot;elm4&quot; name=&quot;elm4&quot; &lt;span style=&quot;color:#ff0000;&quot;&gt;class=&quot;xheditor-mini&quot;&lt;/span&gt; rows=&quot;12&quot; cols=&quot;80&quot; style=&quot;width: 80%&quot;&amp;gt;&lt;/p&gt;
+	</textarea><br /><br />
+	5,自定义详细参数:<br />
+	<textarea id="elm5" name="elm5" class="xheditor {tools:'Bold,Italic,Underline,Strikethrough,About',skin:'default'}" rows="12" cols="80" style="width: 80%">
+&lt;p&gt;当前实例调用的HTML代码为：&lt;/p&gt;&lt;p&gt;&amp;lt;textarea id=&quot;elm5&quot; name=&quot;elm5&quot; &lt;span style=&quot;color:#ff0000;&quot;&gt;class=&quot;xheditor {tools:'Bold,Italic,Underline,Strikethrough,About',skin:'default'}&quot;&lt;/span&gt; rows=&quot;12&quot; cols=&quot;80&quot; style=&quot;width: 80%&quot;&amp;gt; &lt;br /&gt;&lt;/p&gt;&lt;p&gt;在以上3个参数的基础上，可以在后面接一个json格式的详细参数，参数和Javascript初始化模式中的完全一致。前面主参数为xheditor-full、xheditor-mfull、xheditor-simple或者xheditor-mini的情况下，后面参数中tools参数值是无效的，以前面的主参数为主。&lt;/p&gt;
 	</textarea>
 	<br/><br />
 	<input type="submit" name="save" value="Submit" />
