1. 修正：解决初始化后焦点定位在编辑器中的问题 2. 修正：del标签被处理到块标签外问题的修正 3. 修正：卸载时最新值没同步回textarea问题的修正
1. 调整：鉴于用户反馈Preview“预览”功能实用价值不大，又占相对较大代码量，特删除此功能，由于功能关联并连带删除只读功能
2. 调整：由于原API互动接口变量editor某些情况下会造成Firefox产生Security error错误提示，变量名变更为xheditor

--- a/demos/demo02.html
+++ b/demos/demo02.html
@@ -14,8 +14,8 @@ function pageInit()
 	$('#elm2').xheditor({tools:'mfull',shortcuts:{'ctrl+enter':submitForm}});
 	$('#elm3').xheditor({tools:'simple',shortcuts:{'ctrl+enter':submitForm}});
 	$('#elm4').xheditor({tools:'mini',shortcuts:{'ctrl+enter':submitForm}});
-	$('#elm5').xheditor({tools:'Cut,Copy,Paste,Pastetext,Separator,Source,Preview,Fullscreen,About',shortcuts:{'ctrl+enter':submitForm}});
-	$('#elm6').xheditor({tools:'Cut,Copy,Paste,Pastetext,BtnBr,Source,Preview,Fullscreen,About',shortcuts:{'ctrl+enter':submitForm}});
+	$('#elm5').xheditor({tools:'Cut,Copy,Paste,Pastetext,Separator,Source,Fullscreen,About',shortcuts:{'ctrl+enter':submitForm}});
+	$('#elm6').xheditor({tools:'Cut,Copy,Paste,Pastetext,BtnBr,Source,Fullscreen,About',shortcuts:{'ctrl+enter':submitForm}});
 }
 function submitForm(){$('#frmDemo').submit();}
 </script>
@@ -57,11 +57,11 @@ function submitForm(){$('#frmDemo').submit();}
 	</textarea><br /><br />
 	5,custom(自定义):<br />
 	<textarea id="elm5" name="elm5" rows="12" cols="80" style="width: 80%">
-&lt;p&gt;当前实例调用的Javascript源代码为：&lt;/p&gt;&lt;p&gt;$('#elm5').xheditor({&lt;span style=&quot;color:#ff0000;&quot;&gt;tools:'Cut,Copy,Paste,Pastetext,Separator,Source,Preview,Fullscreen,About'&lt;/span&gt;});&lt;/p&gt;
+&lt;p&gt;当前实例调用的Javascript源代码为：&lt;/p&gt;&lt;p&gt;$('#elm5').xheditor({&lt;span style=&quot;color:#ff0000;&quot;&gt;tools:'Cut,Copy,Paste,Pastetext,Separator,Source,Fullscreen,About'&lt;/span&gt;});&lt;/p&gt;
 	</textarea><br /><br />
 	6,自定义多行模式:<br />
 	<textarea id="elm6" name="elm6" rows="12" cols="80" style="width: 80%">
-&lt;p&gt;当前实例调用的Javascript源代码为：&lt;/p&gt;&lt;p&gt;$('#elm6').xheditor({tools:'Cut,Copy,Paste,Pastetext,&lt;span style=&quot;color:#ff0000;&quot;&gt;BtnBr&lt;/span&gt;,Source,Preview,Fullscreen,About'});&lt;/p&gt;
+&lt;p&gt;当前实例调用的Javascript源代码为：&lt;/p&gt;&lt;p&gt;$('#elm6').xheditor({tools:'Cut,Copy,Paste,Pastetext,&lt;span style=&quot;color:#ff0000;&quot;&gt;BtnBr&lt;/span&gt;,Source,Fullscreen,About'});&lt;/p&gt;
 	</textarea>
 	<br/><br />
 	<input type="submit" name="save" value="Submit" />
