--- a/demos/demo04.html
+++ b/demos/demo04.html
@@ -13,7 +13,7 @@ function pageInit()
 	$('#elm1').xheditor({localUrl:'rel',shortcuts:{'ctrl+enter':submitForm}});
 	$('#elm2').xheditor({localUrl:'root',shortcuts:{'ctrl+enter':submitForm}});
 	$('#elm3').xheditor({localUrl:'abs',shortcuts:{'ctrl+enter':submitForm}});
-	$('#elm4').xheditor({tools:'full',skin:'default',width:800,height:200,clickCancelDialog:false,fullscreen:false,layerShadow:3,linkTag:false,wordDeepClean:false,defLinkText:'默认超链接文字',sourceMode:false,showBlocktag:true,forcePtag:false,keepValue:true,readonly:false,internalScript:true,inlineScript:true,internalStyle:true,inlineStyle:true,hoverExecDelay:-1,loadCSS:'http://xheditor.com/css/global.css',emots:{qq:{name:'QQ',count:55,width:25,height:25,line:11},msn:{name:'MSN',count:40,width:22,height:22,line:8}},shortcuts:{'ctrl+enter':submitForm}});
+	$('#elm4').xheditor({tools:'full',skin:'default',width:800,height:200,clickCancelDialog:false,fullscreen:false,layerShadow:3,linkTag:false,wordDeepClean:false,defLinkText:'默认超链接文字',sourceMode:false,showBlocktag:true,forcePtag:false,keepValue:true,internalScript:true,inlineScript:true,internalStyle:true,inlineStyle:true,hoverExecDelay:-1,loadCSS:'http://xheditor.com/css/global.css',emots:{qq:{name:'QQ',count:55,width:25,height:25,line:11},msn:{name:'MSN',count:40,width:22,height:22,line:8}},shortcuts:{'ctrl+enter':submitForm}});
 }
 function submitForm(){$('#frmDemo').submit();}
 </script>
@@ -51,7 +51,7 @@ function submitForm(){$('#frmDemo').submit();}
 	</textarea><br /><br />
 	4,其它更多选项:<br />
 	<textarea id="elm4" name="elm4" rows="8" cols="80" style="width: 80%">
-&lt;p&gt;当前实例调用的Javascript源代码为：&lt;/p&gt;&lt;p&gt;$('#elm4').xheditor({tools:'full',skin:'default',width:800,height:200,clickCancelDialog:false,fullscreen:false,layerShadow:3,linkTag:false,wordDeepClean:false,defLinkText:'默认超链接文字',sourceMode:false,showBlocktag:true,forcePtag:false,keepValue:true,readonly:false,internalScript:true,inlineScript:true,internalStyle:true,inlineStyle:true,hoverExecDelay:-1,loadCSS:'http://xheditor.com/css/global.css',emots:{qq:{name:'QQ',count:55,width:25,height:25,line:11},msn:{name:'MSN',count:40,width:22,height:22,line:8}},shortcuts:{'ctrl+enter':submitForm}});&lt;/p&gt;&lt;br /&gt;&lt;br /&gt;注：本实例演示其它大部分的初始化参数，详细帮助信息请查看：&lt;a href="http://code.google.com/p/xheditor/wiki/Help"&gt;http://code.google.com/p/xheditor/wiki/Help&lt;/a&gt;
+&lt;p&gt;当前实例调用的Javascript源代码为：&lt;/p&gt;&lt;p&gt;$('#elm4').xheditor({tools:'full',skin:'default',width:800,height:200,clickCancelDialog:false,fullscreen:false,layerShadow:3,linkTag:false,wordDeepClean:false,defLinkText:'默认超链接文字',sourceMode:false,showBlocktag:true,forcePtag:false,keepValue:true,internalScript:true,inlineScript:true,internalStyle:true,inlineStyle:true,hoverExecDelay:-1,loadCSS:'http://xheditor.com/css/global.css',emots:{qq:{name:'QQ',count:55,width:25,height:25,line:11},msn:{name:'MSN',count:40,width:22,height:22,line:8}},shortcuts:{'ctrl+enter':submitForm}});&lt;/p&gt;&lt;br /&gt;&lt;br /&gt;注：本实例演示其它大部分的初始化参数，详细帮助信息请查看：&lt;a href="http://code.google.com/p/xheditor/wiki/Help"&gt;http://code.google.com/p/xheditor/wiki/Help&lt;/a&gt;
 	</textarea>
 	<br/><br />
 	<input type="submit" name="save" value="Submit" />
