--- a/demos/demo05.html
+++ b/demos/demo05.html
@@ -12,7 +12,7 @@ var editor;
 function pageInit()
 {
 	editor=$('#elm1').xheditor({shortcuts:{'ctrl+enter':submitForm}});//交互方式1
-	editor=$('#elm1')[0].editor;//交互方式2
+	editor=$('#elm1')[0].xheditor;//交互方式2
 }
 function submitForm(){$('#frmDemo').submit();}
 </script>
@@ -37,7 +37,7 @@ function submitForm(){$('#frmDemo').submit();}
 <form id="frmDemo" method="post" action="show.php">
 	<h3>xhEditor demo5 : Javascript API交互</h3>
 	<textarea id="elm1" name="elm1" rows="12" cols="80" style="width: 80%">
-&lt;p&gt;当前实例调用的Javascript源代码为：&lt;/p&gt;&lt;p&gt;var editor;&lt;br /&gt;editor=$('#elm1').xheditor();//方式1&lt;br /&gt;editor=$('#elm1')[0].editor;//方式2&lt;br /&gt;editor.pasteHTML('&amp;lt;strong&amp;gt;粘贴的内容&amp;lt;/strong&amp;gt;');&lt;/p&gt;&lt;p&gt;&lt;br /&gt;注：本页面演示大部分外部调用的API接口，更多详细帮助信息请查看：&lt;a href=&quot;http://code.google.com/p/xheditor/wiki/Help&quot;&gt;http://code.google.com/p/xheditor/wiki/Help&lt;/a&gt;&lt;/p&gt;
+&lt;p&gt;当前实例调用的Javascript源代码为：&lt;/p&gt;&lt;p&gt;var editor;&lt;br /&gt;editor=$('#elm1').xheditor();//方式1&lt;br /&gt;editor=$('#elm1')[0].xheditor;//方式2&lt;br /&gt;editor.pasteHTML('&amp;lt;strong&amp;gt;粘贴的内容&amp;lt;/strong&amp;gt;');&lt;/p&gt;&lt;p&gt;&lt;br /&gt;注：本页面演示大部分外部调用的API接口，更多详细帮助信息请查看：&lt;a href=&quot;http://code.google.com/p/xheditor/wiki/Help&quot;&gt;http://code.google.com/p/xheditor/wiki/Help&lt;/a&gt;&lt;/p&gt;
 	</textarea>
 	<br /><br />
 	<input type="submit" name="save" value="Submit" />
@@ -58,9 +58,7 @@ function submitForm(){$('#frmDemo').submit();}
 <a href="javascript:;" onclick="alert(editor.formatXHTML('<b>abc</b>'));">formatXHTML('&lt;b&gt;abc&lt;/b&gt;');</a> | 
 <a href="javascript:;" onclick="editor.toggleSource();">toggleSource();</a> | 
 <a href="javascript:;" onclick="editor.toggleSource(true);">toggleSource(true);</a> | 
-<a href="javascript:;" onclick="editor.togglePreview(true);">togglePreview(true);</a> | 
-<a href="javascript:;" onclick="editor.toggleFullscreen(true);">toggleFullscreen(true);</a> | 
-<a href="javascript:;" onclick="editor.toggleReadonly();">toggleReadonly();</a> | 
+<a href="javascript:;" onclick="editor.toggleFullscreen(true);">toggleFullscreen(true);</a> |  
 <a href="javascript:;" onclick="editor.toggleShowBlocktag();">toggleShowBlocktag();</a> | 
 <a href="javascript:;" onclick="alert(editor.settings.upLinkExt);">alert(settings.upLinkExt)</a>
 </div>
