ver 1.1.1 (2010-10-1) 1. 添加：添加background初始化参数，用来定义编辑器编辑区域的背景，此参数格式同CSS的同名参数一致。同时也支持直接定义textarea的CSS background
1. 修正：原IE内存泄漏解决方案不完美，造成IE焦点丢失的问题修正
2. 修正：Firefox浏览器中文件拖放在空白区域无响应问题的修正
3. 修正：IE6及IE7浏览器粘贴内容产生JS错误问题的修正
4. 修正：IE浏览器下右键菜单焦点混乱问题的修正
5. 修正：IE浏览器下出现<font>test</font>代码时会导致JS出错问题的修正
6. 修正：在配置为Iframe式上传的编辑器中拖放文件会产生错误问题的修正
7. 修正：IE浏览器中使用缩略图上传模式会产生类似 jquery1284539697843="269"的额外属性修正
8. 修正：IE浏览器中拖动img大小，不更新width和height属性值问题的修正
9. 修正：IE浏览器中粘贴某些视频分享代码出现代码混乱的修正
10.修正：UBB模式下点击“预览”按钮仍显示UBB代码的问题修正
11.修正：Chrome浏览器下某些情况下切换源代码会提示JS错误问题的修正
12.修正：IE浏览器下HTML代码的可视内容前面的script、style或注释会丢失问题的修正
13.修正：HTML代码中的script,style代码段换行丢失导致JS执行错误问题的修正

--- a/demos/demo04.html
+++ b/demos/demo04.html
@@ -55,7 +55,7 @@ function submitForm(){$('#frmDemo').submit();}
 &lt;p&gt;内部图片：&lt;img src=&quot;img/xheditor.gif&quot; alt=&quot;&quot; /&gt;&lt;/p&gt;&lt;p&gt;外部图片：&lt;img src=&quot;http://www.google.cn/intl/zh-CN/images/logo_cn.gif&quot; alt=&quot;&quot; /&gt;&lt;/p&gt;&lt;p&gt;内部链接：&lt;a href=&quot;index.html&quot;&gt;xhEditor&lt;/a&gt;&lt;/p&gt;&lt;p&gt;外部链接：&lt;a href=&quot;http://www.google.com/&quot;&gt;Google&lt;/a&gt;&lt;/p&gt;&lt;p&gt;&nbsp;&lt;/p&gt;&lt;p&gt;当前实例调用的Javascript源代码为：&lt;/p&gt;&lt;p&gt;$('#elm3').xheditor({&lt;span style=&quot;color:#ff0000;&quot;&gt;urlType:'abs'&lt;/span&gt;});&lt;br /&gt;&lt;/p&gt;
 	</textarea><br /><br />
 	4,其它更多选项:<br />
-	<textarea id="elm4" name="elm4" rows="8" cols="80" style="width: 80%">
+	<textarea id="elm4" name="elm4" rows="8" cols="80" style="width: 80%;background:url(img/xheditorbg.gif) no-repeat right bottom fixed">
 &lt;p&gt;当前实例调用的Javascript源代码为：&lt;/p&gt;&lt;p&gt;$('#elm4').xheditor({tools:'full',skin:'default',width:800,height:200,clickCancelDialog:false,fullscreen:false,layerShadow:3,linkTag:false,wordDeepClean:false,defLinkText:'默认超链接文字',sourceMode:false,showBlocktag:true,forcePtag:false,internalScript:true,inlineScript:true,internalStyle:true,inlineStyle:true,hoverExecDelay:-1,loadCSS:'http://xheditor.com/css/global.css',emots:{msn:{name:'MSN',count:40,width:22,height:22,line:8}},shortcuts:{'ctrl+enter':submitForm}});&lt;/p&gt;&lt;br /&gt;&lt;br /&gt;注：本实例演示其它大部分的初始化参数，详细帮助信息请查看：&lt;a href="http://code.google.com/p/xheditor/wiki/Help"&gt;http://code.google.com/p/xheditor/wiki/Help&lt;/a&gt;
 	</textarea>
 	<br/><br />
