--- a/demos/googlemap/googlemap.html
+++ b/demos/googlemap/googlemap.html
@@ -12,7 +12,7 @@ button{border:1px solid #888;border-color:#fff #888 #888 #fff;}
 #mapArea{width:512px; height:320px;border:1px #999 solid;text-align:center;margin-top:10px}
 -->
 </style>
-<script type="text/javascript" src="/source/trunk/jquery/jquery-1.4.2.min.js"></script>
+<script type="text/javascript" src="../../jquery/jquery-1.4.2.min.js"></script>
 <script type="text/javascript" src="http://maps.google.com/maps?file=api&amp;v=2&amp;sensor=true&amp;key=ABQIAAAAsQS3DCWoLbsHjT5A-Rc5GRQytC_z39rw0YKa7eGzB6pqls_7bRS9wBsWdAcbMFl7GnlsOUJZRvTNvQ&hl=zh-cn"></script>
 <script type="text/javascript" src="googlemap.js"></script>
 </head>
