--- a/wizard.html
+++ b/wizard.html
@@ -2,9 +2,9 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>xhEditor初始化代码生成向导 for xhEditor 1.1.0</title>
+<title>xhEditor初始化代码生成向导 for xhEditor 1.1.1</title>
 <script type="text/javascript" src="jquery/jquery-1.4.2.min.js"></script>
-<script type="text/javascript" src="xheditor-zh-cn.js?v=1.1.0"></script>
+<script type="text/javascript" src="xheditor-zh-cn.js?v=1.1.1"></script>
 <script type="text/javascript">
 $(pageInit);
 function pageInit()
@@ -63,7 +63,7 @@ body{
 </style>
 </head>
 <body>
-	<h1 class="top">xhEditor初始化代码生成向导 for xhEditor 1.1.0</h1>
+	<h1 class="top">xhEditor初始化代码生成向导 for xhEditor 1.1.1</h1>
 	<h2>1: 选择编辑器初始化模式</h2>
 	<div class="section"><select id="editorMode"><option value="1" selected="selected">Class初始化</option><option value="2">Javascript初始化</option></select></div>
 	<h2>2: 更改初始化参数</h2>
@@ -83,6 +83,7 @@ body{
 					<p><label><acronym title="强制P标签">forcePtag</acronym></label><select name="forcePtag"><option value="" selected="selected">强制P标签 (default)</option><option value="false">使用BR标签</option></select> <span>强制P标签</span></p>
 					<p><label><acronym title="强制将粘贴的内容转换为文本">forcePasteText</acronym></label><select name="forcePasteText"><option value="true">开启</option><option value="false" selected="selected">关闭 (default)</option></select> <span>强制将粘贴的内容转换为文本</span></p>
 					<p><label><acronym title="禁用编辑区的右键菜单">disableContextmenu</acronym></label><select name="disableContextmenu"><option value="true">禁用</option><option value="false" selected="selected">不禁用 (default)</option></select> <span>禁用编辑区的右键菜单</span></p>
+					<p><label><acronym title="编辑器背景">background</acronym></label><input type="text" class="text" value="" name="background"> <span>设置编辑器背景，格式同CSS同名参数一致。建议直接设置textarea的css背景</span></p>
 					<p><label><acronym title="编辑器JS所在的根路径">editorRoot</acronym></label><input type="text" class="text" value="" name="tools"> <span>编辑器JS文件所在的根路径，用在某些特殊情况下定位编辑器的根路径</span></p>
 				</div>
 			</fieldset>
