ver 1.1.6 (2011-4-10) 1. 添加：添加对IE9浏览器的完美兼容支持 2. 添加：Iframe上传模式添加跨域上传支持
1. 修正：mms等非HTTP协议的地址被错误转换问题的进一步修正
2. 修正：IE浏览器下，当图片处在有定义宽度或高度的DIV中，会造成无法编辑图片问题的修正
3. 修正：UBB模式下双引号"被错误转换成&quot;问题的修正
4. 修正：Word简单清理模式会提示JS出错问题的修正
5. 修正：PHP版服务器端上传演示程序upload.php在权限限制相对较严格的WEB服务器上出现无法上传问题的修正
6. 修正：urlType参数对表情路径无效问题的修正
7. 修正：表格编辑时，单元格光标左边多出一个空格问题的修正
8. 修正：UBB模式下Flash代码被清除问题的修正
9. 修正：点击源代码按钮，会造成两个标签之间的空格丢失问题的修正
10.修正：Opera浏览器从Word复制内容到编辑器中不会自动过滤问题的修正
11.修正：Iframe上传模式，当光标处在内页中，按Esc键不会关闭当前Iframe窗口问题的修正

--- a/demos/demo11.html
+++ b/demos/demo11.html
@@ -24,7 +24,7 @@ function loadJS(url,callback,charset)
 }
 function initEditor()
 {
-	loadJS('../xheditor-zh-cn.js?v=1.1.4',function(){$('#elm1').xheditor({shortcuts:{'ctrl+enter':submitForm}});$('#btnInit').hide();});
+	loadJS('../xheditor-zh-cn.js',function(){$('#elm1').xheditor({shortcuts:{'ctrl+enter':submitForm}});$('#btnInit').hide();});
 }
 function submitForm(){$('#frmDemo').submit();}
 </script>
