--- a/demos/demo09.html
+++ b/demos/demo09.html
@@ -11,13 +11,13 @@
 	background-position:2px 2px;
 }
 .btnCode {
-	background:transparent url(syntaxhighlighter/code.gif) no-repeat 16px 16px;
+	background:transparent url(prettify/code.gif) no-repeat 16px 16px;
 	background-position:2px 2px;
 }
 -->
 </style>
 <script type="text/javascript" src="../jquery/jquery-1.4.2.min.js"></script>
-<script type="text/javascript" src="../xheditor-zh-cn.js?v=1.1.4"></script>
+<script type="text/javascript" src="../xheditor-zh-cn.js"></script>
 <script type="text/javascript">
 var editor;
 $(pageInit);
@@ -72,17 +72,17 @@ function pageInit()
 		}},
 		Code:{c:'btnCode',t:'插入代码',h:1,e:function(){
 			var _this=this;
-			var htmlCode='<div><select id="xheCodeType"><option value="html">HTML/XML</option><option value="javascript">JavaScript</option><option value="css">CSS</option><option value="php">PHP</option><option value="csharp">C#</option><option value="cpp">C++</option><option value="java">Java</option><option value="python">Python</option><option value="ruby">Ruby</option><option value="vb">Visual Basic</option><option value="delphi">Delphi</option><option value="sql">SQL</option><option value="plain">其它</option></select></div><div><textarea id="xheCodeValue" wrap="soft" spellcheck="false" style="width:300px;height:100px;" /></div><div style="text-align:right;"><input type="button" id="xheSave" value="确定" /></div>';			var jCode=$(htmlCode),jType=$('#xheCodeType',jCode),jValue=$('#xheCodeValue',jCode),jSave=$('#xheSave',jCode);
+			var htmlCode='<div><select id="xheCodeType"><option value="html">HTML/XML</option><option value="js">Javascript</option><option value="css">CSS</option><option value="php">PHP</option><option value="java">Java</option><option value="py">Python</option><option value="pl">Perl</option><option value="rb">Ruby</option><option value="cs">C#</option><option value="c">C++/C</option><option value="vb">VB/ASP</option><option value="">其它</option></select></div><div><textarea id="xheCodeValue" wrap="soft" spellcheck="false" style="width:300px;height:100px;" /></div><div style="text-align:right;"><input type="button" id="xheSave" value="确定" /></div>';			var jCode=$(htmlCode),jType=$('#xheCodeType',jCode),jValue=$('#xheCodeValue',jCode),jSave=$('#xheSave',jCode);
 			jSave.click(function(){
 				_this.loadBookmark();
-				_this.pasteHTML('<pre name="code" class="'+jType.val()+'">'+_this.domEncode(jValue.val())+'</pre>');
+				_this.pasteHTML('<pre class="prettyprint lang-'+jType.val()+'">'+_this.domEncode(jValue.val())+'</pre>');
 				_this.hidePanel();
 				return false;	
 			});
 			_this.showDialog(jCode);
 		}}
 	};
-	editor=$('#elm1').xheditor({plugins:allPlugin,tools:'subscript,superscript,test1,test2,test3,test4,test5,test6,test7,Code,|,Source,Fullscreen,About',loadCSS:'<style>pre{margin-left:20px;border-left:3px solid #6CE26C;padding-left:10px;}</style>',shortcuts:{'ctrl+enter':submitForm}});
+	editor=$('#elm1').xheditor({plugins:allPlugin,tools:'subscript,superscript,test1,test2,test3,test4,test5,test6,test7,Code,|,Source,Fullscreen,About',loadCSS:'<style>pre{margin-left:2em;border-left:3px solid #CCC;padding:0 1em;}</style>',shortcuts:{'ctrl+enter':submitForm}});
 	$('#btnSubscript').click(function(){editor.exec('subscript');});
 	$('#btnTest2').click(function(){editor.exec('test2');});
 }
