--- a/demos/demo10.html
+++ b/demos/demo10.html
@@ -5,12 +5,12 @@
 <title>xhEditor demo10 : showIframeModal接口的iframe文件上传</title>
 <link rel="stylesheet" href="common.css" type="text/css" media="screen" />
 <script type="text/javascript" src="../jquery/jquery-1.4.2.min.js"></script>
-<script type="text/javascript" src="../xheditor-zh-cn.js?v=1.1.4"></script>
+<script type="text/javascript" src="../xheditor-zh-cn.js"></script>
 <script type="text/javascript">
 $(pageInit);
 function pageInit()
 {
-	$('#elm1').xheditor({skin:'vista',upLinkUrl:"!uploadgui.html",upImgUrl:"!uploadgui.html",upFlashUrl:"!uploadgui.html",upMediaUrl:"!uploadgui.html",shortcuts:{'ctrl+enter':submitForm}});
+	$('#elm1').xheditor({skin:'vista',upLinkUrl:"!uploadgui.php",upImgUrl:"!uploadgui.php",upFlashUrl:"!uploadgui.php",upMediaUrl:"!uploadgui.php",shortcuts:{'ctrl+enter':submitForm}});
 	$('#elm2').xheditor({skin:'vista',upLinkUrl:"!{editorRoot}xheditor_plugins/multiupload/multiupload.html?uploadurl={editorRoot}demos/upload.php%3Fimmediate%3D1&ext=附件文件(*.zip;*.rar;*.txt)",upImgUrl:'!{editorRoot}xheditor_plugins/multiupload/multiupload.html?uploadurl={editorRoot}demos/upload.php%3Fimmediate%3D1&ext=图片文件(*.jpg;*.jpeg;*.gif;*.png)',upFlashUrl:'!{editorRoot}xheditor_plugins/multiupload/multiupload.html?uploadurl={editorRoot}demos/upload.php%3Fimmediate%3D1&ext=Flash动画(*.swf)',upMediaUrl:'!{editorRoot}xheditor_plugins/multiupload/multiupload.html?uploadurl={editorRoot}demos/upload.php%3Fimmediate%3D1&ext=多媒体文件(*.wmv;*.avi;*.wma;*.mp3;*.mid)',shortcuts:{'ctrl+enter':submitForm}});
 }
 function submitForm(){$('#frmDemo').submit();}
@@ -37,7 +37,7 @@ function submitForm(){$('#frmDemo').submit();}
 	<h3>xhEditor demo10 : showIframeModal接口的iframe文件上传</h3>
 	1,iframe单文件上传演示:<br />
 	<textarea id="elm1" name="elm1" rows="12" cols="80" style="width: 80%">
-&lt;p&gt;当前实例调用的Javascript源代码为：&lt;/p&gt;&lt;p&gt;$('#elm1').xheditor({skin:'vista',upLinkUrl:"!uploadgui.html",upImgUrl:"!uploadgui.html",upFlashUrl:"!uploadgui.html",upMediaUrl:"!uploadgui.html"});&lt;/p&gt;&lt;p&gt;&lt;br /&gt;&lt;/p&gt;&lt;p&gt;本页面演示通过showIframeModal接口来调用iframe调用指定的文件上传页来上传和管理文件，可以实现高可定义的文件上传和管理，当前示例页面中在“&lt;strong&gt;超链接、图片、Flash动画和视频&lt;/strong&gt;”按钮中实现了演示。&lt;/p&gt;<BR>&lt;p&gt;此功能可在以下4个按钮中通过参数调用来实现：超链接、图片、动画和视频，接口分别为：upLinkUrl、upImgUrl、upFlashUrl和upMediaUrl，默认这几个函数为编辑器内置的ajax式文件上传，想要在frame中调用自定义上传管理页面，必需在参数值最前面添加感叹号：“!”，注意必需为半角符号。例如：upLinkUrl:'!gui.html'&lt;/p&gt;<BR>&lt;p&gt;上传管理页面可使用接口：callback，callback用来返回上传或者选择的文件链接并关闭模式窗口，您可以查看uploadgui.html页面来了解具体的管理页面制作示例&lt;/p&gt;<BR>&lt;p&gt;重要说明：上传管理页必需要与编辑器所在页在同一个子域下&lt;/p&gt;
+&lt;p&gt;当前实例调用的Javascript源代码为：&lt;/p&gt;&lt;p&gt;$('#elm1').xheditor({skin:'vista',upLinkUrl:"!uploadgui.php",upImgUrl:"!uploadgui.php",upFlashUrl:"!uploadgui.php",upMediaUrl:"!uploadgui.php"});&lt;/p&gt;&lt;p&gt;&lt;br /&gt;&lt;/p&gt;&lt;p&gt;本页面演示通过showIframeModal接口来调用iframe调用指定的文件上传页来上传和管理文件，可以实现高可定义的文件上传和管理，当前示例页面中在“&lt;strong&gt;超链接、图片、Flash动画和视频&lt;/strong&gt;”按钮中实现了演示。&lt;/p&gt;<BR>&lt;p&gt;此功能可在以下4个按钮中通过参数调用来实现：超链接、图片、动画和视频，接口分别为：upLinkUrl、upImgUrl、upFlashUrl和upMediaUrl，默认这几个函数为编辑器内置的ajax式文件上传，想要在frame中调用自定义上传管理页面，必需在参数值最前面添加感叹号：“!”，注意必需为半角符号。例如：upLinkUrl:'!gui.html'&lt;/p&gt;<BR>&lt;p&gt;上传管理页面可使用接口：callback，callback用来返回上传或者选择的文件链接并关闭模式窗口，您可以查看uploadgui.php页面来了解具体的管理页面制作示例&lt;/p&gt;
 	</textarea><br /><br />
 	2,iframe多文件批量上传演示:<br />
 	<textarea id="elm2" name="elm2" rows="12" cols="80" style="width: 80%">
