ver 1.1.8 (2011-7-7) 1. 添加：添加非本域名图片远程抓取功能(全浏览器兼容) 2. 添加：添加剪切板图片粘贴上传功能(只支持Firefox 4,5 Chrome 10,11,12) 3. 添加：添加demo12演示(远程抓图&剪切板粘贴上传) 4. 添加：内核添加锚点功能模块 5. 添加：内核添加hr水平线功能模块 6. 添加：添加onPaste回调参数，可在初始化时赋值，用来过滤用户粘贴代码，回调中返回false取消粘贴
1. 修正：针对<div id="test"style="color:#ccc;">这种非标准代码不兼容问题的修正
2. 修正：UBB模式下size标签丢失问题的修正
3. 修正：在IE8下的IE7兼容模式下，模式窗口无法在当前窗口居中问题的修正
4. 修正：插入表格设置高度无效问题的修正
5. 修正：Chrome浏览器中粘贴某些带特殊style属性的代码，无法粘贴问题的修正
6. 修正：IE8浏览器下无法粘贴问题的修正
7. 修正：从Word粘贴到编辑器，出现锚点丢失问题的修正

1. 调整：google地图调整为API v3版，使用更流畅，且无需申请KEY
2. 调整：当textarea处在隐藏状态，进行初始化操作会提示无法初始化，调整为不提示并设置默认高度150像素

--- a/demos/demo02.html
+++ b/demos/demo02.html
@@ -34,6 +34,7 @@ function submitForm(){$('#frmDemo').submit();}
 		<li><a href="demo09.html"><span>插件扩展</span></a></li>
 		<li><a href="demo10.html"><span>iframe调用上传</span></a></li>
 		<li><a href="demo11.html"><span>异步加载</span></a></li>
+		<li><a href="demo12.html"><span>远程抓图</span></a></li>
 		<li><a href="../wizard.html" target="_blank"><span>生成代码</span></a></li>
 	</ul>
 </div>
