--- a/demos/demo07.html
+++ b/demos/demo07.html
@@ -79,6 +79,7 @@ function submitForm(){$('#frmDemo').submit();}
 		<li><a href="demo09.html"><span>插件扩展</span></a></li>
 		<li><a href="demo10.html"><span>iframe调用上传</span></a></li>
 		<li><a href="demo11.html"><span>异步加载</span></a></li>
+		<li><a href="demo12.html"><span>远程抓图</span></a></li>
 		<li><a href="../wizard.html" target="_blank"><span>生成代码</span></a></li>
 	</ul>
 </div>
@@ -91,7 +92,7 @@ function submitForm(){$('#frmDemo').submit();}
 [s][i][u][b]粗体下划斜体删除线 Abc[/b][/u][/i][/s]
 [color=red]红颜色[/color]
 [back=#cccccc]背景灰色[/back]
-[size=3]文字大小为 3[/size]
+[size=16px]文字大小为 16px[/size]
 [font=FangSong_GB2312]字体为仿宋[/font]
 [align=Center]内容居中[/align]
 [img]img/xheditor.gif[/img]
