--- a/demos/demo12.html
+++ b/demos/demo12.html
@@ -2,30 +2,14 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>xhEditor demo11 : 异步加载</title>
+<title>xhEditor demo12 : 远程抓图&amp;剪切板图片粘贴上传</title>
 <link rel="stylesheet" href="common.css" type="text/css" media="screen" />
 <script type="text/javascript" src="../jquery/jquery-1.4.2.min.js"></script>
+<script type="text/javascript" src="../xheditor-zh-cn.js"></script>
 <script type="text/javascript">
-function loadJS(url,callback,charset)
-{
-	var script = document.createElement('script');
-	script.onload = script.onreadystatechange = function ()
-	{
-		if (script && script.readyState && /^(?!(?:loaded|complete)$)/.test(script.readyState)) return;
-		script.onload = script.onreadystatechange = null;
-		script.src = '';
-		script.parentNode.removeChild(script);
-		script = null;
-		if(callback)callback();
-	};
-	script.charset=charset || document.charset || document.characterSet;
-	script.src = url;
-	try {document.getElementsByTagName("head")[0].appendChild(script);} catch (e) {}
-}
-function initEditor()
-{
-	loadJS('../xheditor-zh-cn.js',function(){$('#elm1').xheditor({shortcuts:{'ctrl+enter':submitForm}});$('#btnInit').hide();});
-}
+$(function(){
+	$('#elm1').xheditor({localUrlTest:/^https?:\/\/[^\/]*?(xheditor\.com)\//i,remoteImgSaveUrl:'saveremoteimg.php',shortcuts:{'ctrl+enter':submitForm}});
+});
 function submitForm(){$('#frmDemo').submit();}
 </script>
 </head>
@@ -48,12 +32,11 @@ function submitForm(){$('#frmDemo').submit();}
 	</ul>
 </div>
 <form id="frmDemo" method="post" action="show.php">
-	<h3>xhEditor demo11 : 异步加载</h3>
+	<h3>xhEditor demo12 : 远程抓图&amp;剪切板图片粘贴上传</h3>
 	<textarea id="elm1" name="elm1" rows="12" cols="80" style="width: 80%">
-&lt;p&gt;当前实例调用的Javascript源代码为：&lt;/p&gt;&lt;pre&gt;loadJS('../xheditor-zh-cn.js',function(){$('#elm1').xheditor();});&lt;br /&gt;&lt;/pre&gt;
+&lt;p&gt;本页面演示以下功能：&lt;/p&gt;&lt;ol&gt;&lt;li&gt;粘贴自动抓取远程图片(全浏览器兼容)&lt;/li&gt;&lt;li&gt;剪切板图片粘贴自动上传(仅支持Firefox 4.0,5.0 Chrome 10,11,12)&lt;/li&gt;&lt;/ol&gt;特别说明：Chrome 12及之前的版本(将来版本是否会修正也是个未知数)仅能粘贴QQ等屏幕截图，ACDSEE等图片软件复制粘贴会上传白屏图，具体原因不详，理论上应该是Chrome浏览器的Bug，因为Gmail官方的这个功能也同样存在这个BUG。&lt;br /&gt;
 	</textarea>
 	<br/><br />
-	<input type="button" id="btnInit" value="加载js文件并初始化编辑器" onclick="initEditor()" />
 	<input type="submit" name="save" value="Submit" />
 	<input type="reset" name="reset" value="Reset" />
 </form>
