--- a/demos/googlemap/googlemap.html
+++ b/demos/googlemap/googlemap.html
@@ -13,10 +13,10 @@ button{border:1px solid #888;border-color:#fff #888 #888 #fff;}
 -->
 </style>
 <script type="text/javascript" src="../../jquery/jquery-1.4.2.min.js"></script>
-<script type="text/javascript" src="http://maps.google.com/maps?file=api&amp;v=2&amp;sensor=true&amp;key=ABQIAAAAsQS3DCWoLbsHjT5A-Rc5GRQytC_z39rw0YKa7eGzB6pqls_7bRS9wBsWdAcbMFl7GnlsOUJZRvTNvQ&hl=zh-cn"></script>
+<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
 <script type="text/javascript" src="googlemap.js"></script>
 </head>
-<body onload="initMap(3)" onunload="GUnload()">
+<body onload="initMap()">
 	地址：<input type="text" name="address" id="address" value="北京市" /> <button id="mapsearch">搜索</button> <button id="addMap">插入地图</button>
 	<div id="mapArea"></div>
 </body>
