--- a/demos/index.html
+++ b/demos/index.html
@@ -27,6 +27,7 @@
 			<li><a href="demo09.html" target="_blank">demo09.html</a> (插件扩展)</li>
 			<li><a href="demo10.html" target="_blank">demo10.html</a> (iframe调用文件上传)</li>
 			<li><a href="demo11.html" target="_blank">demo11.html</a> (异步加载)</li>
+			<li><a href="demo12.html" target="_blank">demo12.html</a> (远程抓图)</li>
 		</ol>
 	</body>
 </html>
