--- a/wizard.html
+++ b/wizard.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>xhEditor初始化代码生成向导 for xhEditor 1.1.7</title>
+<title>xhEditor初始化代码生成向导 for xhEditor 1.1.8</title>
 <script type="text/javascript" src="jquery/jquery-1.4.2.min.js"></script>
 <script type="text/javascript" src="xheditor-zh-cn.js"></script>
 <script type="text/javascript">
@@ -63,7 +63,7 @@ body{
 </style>
 </head>
 <body>
-	<h1 class="top">xhEditor初始化代码生成向导 for xhEditor 1.1.7</h1>
+	<h1 class="top">xhEditor初始化代码生成向导 for xhEditor 1.1.8</h1>
 	<h2>1: 选择编辑器初始化模式</h2>
 	<div class="section"><select id="editorMode"><option value="1" selected="selected">Class初始化</option><option value="2">Javascript初始化</option></select></div>
 	<h2>2: 更改初始化参数</h2>
@@ -141,9 +141,9 @@ body{
 		</form>
 	</div>
 	<h2>3: 预览编辑器</h2>
-	<div class="section"><textarea id="preview" name="preview" rows="8" cols="90"></textarea></div>
+	<div class="section"><textarea id="preview" name="preview" rows="8" cols="100"></textarea></div>
 	<h2>4: 复制源代码</h2>
 	<div class="section"><textarea id="source" name="source" rows="4" cols="80"></textarea></div>
-	<div id="note">备注：本向导不包括plugins、onUpload和shortcuts几个参数，请自行添加。更多参数说明和API指南，请访问<a href="http://xheditor.com/manual/2" target="_blank">xhEditor进阶使用</a></div>
+	<div id="note">备注：本向导不包括plugins、onUpload、onPaste和shortcuts几个参数，请自行添加。更多参数说明和API指南，请访问<a href="http://xheditor.com/manual/2" target="_blank">xhEditor进阶使用</a></div>
 </body>
 </html>
