ver 1.1.9 (2011-8-3) 1. 添加：添加盲人无障碍访问支持：全键盘操作，全程语音向导 2. 添加：添加readTip参数，盲人初次编辑时会听到此文字提示，可用来提示快捷键等信息 3. 添加：当页面有锚点时，插入链接自动提供列表选项供选择 4. 添加：ubb模式添加hr水平线标签支持
1. 修正：IE6,IE7浏览器下，锚点在hr标签后面无法正常显示问题的修正
2. 修正：php版远程抓图saveremoteimg.php添加文件mime检查功能，以防止抓取一些非图片文件
3. 修正：带name属性的普通超链接被显示为锚点问题的修正
4. 修正：缩进功能错误的绑定tab按键，导致盲人无法正常浏览网页问题的修正
5. 修正：embed标签被错误的当成块标签处理问题的修正
6. 修正：在Opera 11.50版本中无法上传问题的修正
7. 修正：Firefox下，当页面头部是script或者style，出现无法切换源代码问题的修正
8. 修正：某些script代码会丢失问题的修正

1. 调整：大部分操作系统中不存在Arial Narrow字体，因此从字体列表中删除
2. 调整：触摸屏移动浏览器由于不支持所见即所得，不初始化编辑器，以保留传统文本框编辑功能

--- a/demos/demo09.html
+++ b/demos/demo09.html
@@ -38,6 +38,7 @@ function pageInit()
 				_this.hidePanel();
 				return false;	
 			});
+			_this.saveBookmark();
 			_this.showDialog(jTest);
 		}},
 		test3:{c:'testClassName',t:'测试3：需要转移焦点的对话框 (Ctrl+3)',s:'ctrl+3',h:1,e:function(){
@@ -50,6 +51,7 @@ function pageInit()
 				_this.hidePanel();
 				return false;	
 			});
+			_this.saveBookmark();
 			_this.showDialog(jTest);
 		}},
 		test4:{c:'testClassName',t:'测试4：面板界面 (Ctrl+4)',s:'ctrl+4',h:1,e:function(){
@@ -60,14 +62,17 @@ function pageInit()
 		test5:{c:'testClassName',t:'测试5：菜单调用 (Ctrl+5)',s:'ctrl+5',h:1,e:function(){
 			var _this=this;
 			var arrMenu=[{s:'菜单1',v:'menu1',t:'这是菜单1'},{s:'菜单2',v:'menu2',t:'这是菜单2'},{s:'菜单3',v:'menu3',t:'这是菜单3'}];
+			_this.saveBookmark();
 			_this.showMenu(arrMenu,function(v){_this.pasteHTML(v);});
 		}},
 		test6:{c:'testClassName',t:'测试6：showModal (Ctrl+6)',s:'ctrl+6',e:function(){
 			var _this=this;
+			_this.saveBookmark();
 			_this.showModal('测试showModal接口','<div style="padding:5px;">模式窗口主体内容</div>',500,300);
 		}},
 		test7:{c:'testClassName',t:'测试7：showIframeModal (Ctrl+7)',s:'ctrl+7',e:function(){
 			var _this=this;
+			_this.saveBookmark();
 			_this.showIframeModal('测试showIframeModal接口','uploadgui.php',function(v){_this.loadBookmark();_this.pasteText('返回值：\r\n'+v);},500,300);
 		}},
 		Code:{c:'btnCode',t:'插入代码',h:1,e:function(){
@@ -79,6 +84,7 @@ function pageInit()
 				_this.hidePanel();
 				return false;	
 			});
+			_this.saveBookmark();
 			_this.showDialog(jCode);
 		}}
 	};
