--- a/demos/googlemap/googlemap.html
+++ b/demos/googlemap/googlemap.html
@@ -17,7 +17,7 @@ button{border:1px solid #888;border-color:#fff #888 #888 #fff;}
 <script type="text/javascript" src="googlemap.js"></script>
 </head>
 <body onload="initMap()">
-	地址：<input type="text" name="address" id="address" value="北京市" /> <button id="mapsearch">搜索</button> <button id="addMap">插入地图</button>
+	<label for="address">地址：</label><input type="text" id="address" value="北京市" /> <button id="mapsearch">搜索</button> <button id="addMap">插入地图</button>
 	<div id="mapArea"></div>
 </body>
 </html>
