--- a/demos/demo07.html
+++ b/demos/demo07.html
@@ -37,6 +37,7 @@ function pageInit()
 				_this.hidePanel();
 				return false;	
 			});
+			_this.saveBookmark();
 			_this.showDialog(jCode);
 		}},
 		Flv:{c:'btnFlv',t:'插入Flv视频',h:1,e:function(){
@@ -49,11 +50,13 @@ function pageInit()
 				_this.hidePanel();
 				return false;	
 			});
+			_this.saveBookmark();
 			_this.showDialog(jFlv);
 		}},
 		map:{c:'btnMap',t:'插入Google地图',e:function(){
 			var _this=this;
-			_this.showIframeModal('Google 地图','googlemap/googlemap.html',function(v){_this.pasteHTML('<img src="'+v+'" />');},538,404);
+			_this.saveBookmark();
+			_this.showIframeModal('Google 地图','googlemap/googlemap.html',function(v){_this.loadBookmark();_this.pasteHTML('<img src="'+v+'" />');},538,404);
 		}}
 	},emots={
 		msn:{name:'MSN',count:40,width:22,height:22,line:8},
